Update for Patch v3.9.1 - checksum: 629C

--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -599,7 +599,7 @@
  d_sentinels:1 "เซนติเนล"
  d_sentinels_desc:1 "The Sentinels guard this land; it may not be disturbed. The Sentinels counts as Defense Armies, and will come to the planet's aid if there's an invasion."
  d_hab_gas_1:0 "Exotic Gas Deposit"
- d_hab_gas_1_desc:0 "This habitat is built near an exploitable exotic gas deposit."
+ d_hab_gas_1_desc:1 "This $habitat_complex$ is built near an exploitable exotic gas deposit."
  d_hab_gas_2:0 "$d_hab_gas_1$"
  d_hab_gas_2_desc:0 "$d_hab_gas_1_desc$"
  d_hab_gas_3:0 "$d_hab_gas_1$"
@@ -609,7 +609,7 @@
  d_hab_gas_5:0 "$d_hab_gas_1$"
  d_hab_gas_5_desc:0 "$d_hab_gas_1_desc$"
  d_hab_crystal_1:0 "Rare Crystal Deposit"
- d_hab_crystal_1_desc:1 "This habitat is built near an exploitable rare crystal deposit."
+ d_hab_crystal_1_desc:1 "This $habitat_complex$ is built near an exploitable rare crystal deposit."
  d_hab_crystal_2:0 "$d_hab_crystal_1$"
  d_hab_crystal_2_desc:0 "$d_hab_crystal_1_desc$"
  d_hab_crystal_3:0 "$d_hab_crystal_1$"
@@ -619,7 +619,7 @@
  d_hab_crystal_5:0 "$d_hab_crystal_1$"
  d_hab_crystal_5_desc:0 "$d_hab_crystal_1_desc$"
  d_hab_mote_1:0 "Volatile Mote Deposit"
- d_hab_mote_1_desc:0 "This habitat is built near an exploitable volatile mote deposit."
+ d_hab_mote_1_desc:1 "This $habitat_complex$ is built near an exploitable volatile mote deposit."
  d_hab_mote_2:0 "$d_hab_mote_1$"
  d_hab_mote_2_desc:0 "$d_hab_mote_1_desc$"
  d_hab_mote_3:0 "$d_hab_mote_1$"
@@ -629,7 +629,7 @@
  d_hab_mote_5:0 "$d_hab_mote_1$"
  d_hab_mote_5_desc:0 "$d_hab_mote_1_desc$"
  d_hab_alloy_1:0 "Alloy Deposit"
- d_hab_alloy_1_desc:0 "This habitat is built near an exploitable source of alloys."
+ d_hab_alloy_1_desc:1 "This $habitat_complex$ is built near an exploitable source of alloys."
  d_hab_alloy_2:0 "$d_hab_alloy_1$"
  d_hab_alloy_2_desc:0 "$d_hab_alloy_1_desc$"
  d_hab_alloy_3:0 "$d_hab_alloy_1$"
@@ -643,7 +643,7 @@
  d_hab_alloy_25:0 "$d_hab_alloy_1$"
  d_hab_alloy_25_desc:0 "$d_hab_alloy_1_desc$"
  d_hab_zro_1:0 "Zro Deposit"
- d_hab_zro_1_desc:0 "This habitat is built near an exploitable zro deposit."
+ d_hab_zro_1_desc:1 "This $habitat_complex$ is built near an exploitable zro deposit."
  d_hab_zro_2:0 "$d_hab_zro_1$"
  d_hab_zro_2_desc:0 "$d_hab_zro_1_desc$"
  d_hab_zro_3:0 "$d_hab_zro_1$"
@@ -653,7 +653,7 @@
  d_hab_zro_5:0 "$d_hab_zro_1$"
  d_hab_zro_5_desc:0 "$d_hab_zro_1_desc$"
  d_hab_dark_matter_1:1 "Dark Matter Deposit"
- d_hab_dark_matter_1_desc:0 "This habitat is built near an exploitable dark matter deposit."
+ d_hab_dark_matter_1_desc:1 "This $habitat_complex$ is built near an exploitable dark matter deposit."
  d_hab_dark_matter_2:0 "$d_hab_dark_matter_1$"
  d_hab_dark_matter_2_desc:0 "$d_hab_dark_matter_1_desc$"
  d_hab_dark_matter_3:0 "$d_hab_dark_matter_1$"
@@ -661,7 +661,7 @@
  d_hab_dark_matter_10:0 "$d_hab_dark_matter_1$"
  d_hab_dark_matter_10_desc:0 "$d_hab_dark_matter_1_desc$"
  d_hab_living_metal_1:0 "Living Metal Deposit"
- d_hab_living_metal_1_desc:0 "This habitat is built near an exploitable living metal deposit."
+ d_hab_living_metal_1_desc:1 "This $habitat_complex$ is built near an exploitable living metal deposit."
  d_sentinels_monument:0 "$sentinels_planet_modifier$"
  d_sentinels_monument_desc:1 "$sentinels_planet_modifier_desc$"
  d_sentinels_metal:0 "เซนติเนล"
@@ -801,7 +801,7 @@
  tech_archaeo_mass_accelerator_desc:0 "This cannon fires a barrage of ancient miniscule ionized spheres that charge upon contact with most force fields, giving them high levels of shield penetration. Any theory that these spheres could have been used for jewelry purposes were dismissed when a critical incident melted an entire laboratory."
  tech_archaeo_strike_crafts:0 "โดรนขุดเจาะโบราณ"
  tech_archaeo_strike_crafts_desc:0 "These high velocity drones have been equipped with antique mining lasers that virtually ignore any plating protecting their target. A tech too good to be wasted on astro mining."
- building_archaeostudies_faculty_relic_effect:1 "หากสร้างบน §Yดาวโบราณ§!:\n ความเร็วการวิจัย (การศึกษาโบราณคดี): §G+50%§!\n £minor_artifacts£ ศิลปวัตถุชั้นรองจาก £job_researcher£ การศึกษาโบราณคดี: §G+0.3§!"
+ building_archaeostudies_faculty_relic_effect:1 "หากสร้างบน §Yดาวโบราณ§!:\n$t$-  ความเร็วการวิจัย (การศึกษาโบราณคดี): §G+50%§!\n$t$- £minor_artifacts£ ศิลปวัตถุชั้นรองจาก £job_researcher£ $job_archaeoengineers_plural$: §G+0.3§!"
  building_archaeostudies_faculty:0 "คณะโบราณคดี"
  building_archaeostudies_faculty_desc:0 "A series of laboratories dedicated to the studies of technological applications of minor artifacts retrieved from elder empires."
  building_league_offices:0 "$tech_secrets_league$"
@@ -844,16 +844,16 @@
  improved_archaeo_overcharger_desc:0 "Starbase Modifier:\nShield Hit Point: §G+50%§!\nShield Hardening: §G+50%§!\nDefense Platform Modifier:\nShield Hit Points: §G+25%§!\nShield Hardening: §G+25%§!"
  building_archaeo_refinery:0 "$tech_archaeo_refinery$"
  building_archaeo_refinery_desc:0 "$tech_archaeo_refinery_desc$"
- job_archaeoengineers:0 "วิศวกรโบราณคดี"
- job_archaeoengineers_plural:0 "วิศวกรโบราณคดี"
+ job_archaeoengineers:1 "วิศวกรโบราณคดี"
+ job_archaeoengineers_plural:1 "วิศวกรโบราณคดี"
  job_archaeoengineers_desc:0 "Sometimes, it belongs in a warship, not a museum."
  job_archaeoengineers_effect_desc:1 "£job_researcher£ $job_archaeoengineers_plural$ เปลี่ยน $r_consumer_goods$ เป็น §Yแต้มการวิจัย§! £physics£ £society£ £engineering£"
- job_archaeo_drone:0 "โดรนวิศวกรโบราณคดี"
- job_archaeo_drone_plural:0 "โดรนวิศวกรโบราณคดี"
- job_archaeo_drone_desc:0 "For a Hive, cultural preservation doesn't hold as much power as an archaeolaser."
+ job_archaeo_drone:1 "โดรนวิศวกรโบราณคดี"
+ job_archaeo_drone_plural:1 "โดรนวิศวกรโบราณคดี"
+ job_archaeo_drone_desc:1 "For a Hive, cultural preservation doesn't hold as much power as an archaeolaser."
  job_archaeo_drone_effect_desc:2 "£job_researcher£ $job_archaeo_drone_plural$ เปลี่ยน $r_minerals$ เป็น §Yแต้มการวิจัย§! £physics£ £society£ £engineering£"
- job_archaeo_unit:0 "ยูนิตวิศวกรโบราณคดี"
- job_archaeo_unit_plural:0 "ยูนิตวิศวกรโบราณคดี"
+ job_archaeo_unit:1 "ยูนิตวิศวกรโบราณคดี"
+ job_archaeo_unit_plural:1 "ยูนิตวิศวกรโบราณคดี"
  job_archaeo_unit_desc:0 "Specialized drones for the careful manipulation and study of ancient artifacts."
  job_archaeo_unit_effect_desc:2 "£job_researcher£ $job_archaeo_unit_plural$ เปลี่ยน $r_energy$ เป็น §Yแต้มการวิจัย§! £physics£ £society£ £engineering£"
  ARCHAEO_SHIELD:0 "$tech_archaeoshield$"
@@ -919,7 +919,7 @@
  ap_archaeoengineers:0 "วิศวกรโบราณคดี"
  ap_archaeoengineers_desc:0 "การผสมผสานเทคโนโลยีโบราณที่ได้รับการพิสูจน์แล้วเข้ากับวิศวกรรมสมัยใหม่จะทำให้เราได้เปรียบเหนือกาลเวลา"
  requires_technology_tech_archaeostudies:0 "$TRIGGER_FAIL$ต้องการเทคโนโลยี £society£ §Y$tech_archaeostudies$§!"
- ap_archaeoengineers_tooltip:0 "ปลดล็อกเอฟเฟกต์เพิ่มเติมได้แก่ชิ้นส่วนยานและสิ่งปลูกสร้าง §Yโบราณ§!"
+ ap_archaeoengineers_tooltip:0 "ปลดล็อกเอฟเฟกต์เพิ่มเติมให้แก่ชิ้นส่วนยานและสิ่งปลูกสร้าง §Yโบราณ§!"
  count_archaeological_site_trigger:0 "Number of Dig Sites excavated"
  mod_category_archaeostudies_research_speed_mult:0 "ความเร็วในการวิจัย (การศึกษาโบราณคดี)"
  mod_job_archaeoengineers_add:0 "งาน $job_archaeoengineers$"
@@ -929,6 +929,7 @@
  leader_trait_expertise_archaeostudies:0 "เชี่ยวชาญ: การศึกษาโบราณคดี"
  leader_trait_expertise_archaeostudies_desc:0 "This leader is, following years of study, considered an expert within the field of Archaeostudies."
  aura_detection_scrambler:0 "Detection Scrambler"
+ mod_starbase_shipyard_build_minor_artifacts_cost_mult: "Minor Artifact Ship Cost"
  opinion_devolved_a_world:0 "Devolved a World"
  opinion_devolved_my_world:0 "Devolved one of our Worlds"
  opinion_devolved_a_primitive_world:0 "Devolved a Primitive World"
@@ -941,4 +942,4 @@
  recently_devolved:0 "£trigger_no£ This planet was recently devolved, the lingering energy would disrupt any further attempts. We must wait at least §Y1 Year§! £time£ before firing here again."
  planet_destruction.901.name:0 "Planet Devolved"
  planet_destruction.901.desc:0 "As the energies of the mind wiping beam from the [FromFrom.GetName] dissipate, [From.GetName]'s population has almost entirely regressed to the pre-sapient stage. Those who were spared can now only watch in horror as those they once knew return to animalistic behaviors."
- weapon_archaeotech:0 "§YArchaeotech§!"
+ weapon_archaeotech:0 "§Yเทคโนโลยีจากโบราณคดี§!"
