--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -68,7 +68,7 @@
  apoc.110.name:0 "The Gun Pointed at the Head of the Universe"
  apoc.110.desc:0 "Leading scientists across all conceivable fields have at last finalized their proposals for the §RPlanet-Killer§!-class weapon that will arm our first Colossus-type ships. We may select one proposal to develop alongside the final stages of the Colossus Project."
  apoc.110.desc.machine:1 "Spare processing cycles have been estimated and deemed sufficient to develop one (1) §RPlanet-Killer§!-class weapon to coincide with completion of §GColossus Project§!.\n\nPrioritization needed."
- apoc.110.desc.hive:0 "We have explored a myriad of possibilities, and it is now clear to us that we can develop a suitable §RPlanet-Killer§!-class weapon for our very first Colossus-type vessels. While other avenues can be pursued later, we can only spare the attention to develop one such weapon alongside the final stages of the Colossus Project."
+ apoc.110.desc.hive:0 "We have explored myriad possibilities, and it is now clear to us that we can develop a suitable §RPlanet-Killer§!-class weapon for our very first Colossus-type vessels. While other avenues can be pursued later, we can only spare the attention to develop one such weapon alongside the final stages of the Colossus Project."
  apoc.110.cracker.tooltip:0 "§RPlanet-Killer Weapon§!:\n§L$PLANET_KILLER_CRACKER_DESC$§!"
  apoc.110.shielder.tooltip:0 "§RPlanet-Killer Weapon§!:\n§L$PLANET_KILLER_SHIELDER_DESC$§!"
  apoc.110.neutron.tooltip:0 "§RPlanet-Killer Weapon§!:\n§L$PLANET_KILLER_NEUTRON_DESC$§!"
@@ -241,6 +241,7 @@
  requires_trade_planet:0 "§RRequires a colonized planet or a §YTrader Enclave§! in the system.§!"
  requires_black_hole:0 "§Rต้องมี §Y$pc_black_hole$§! ในระบบดาว§!"
  requires_nebula:0 "§Rต้องการระบบดาวที่อยู่ภายใน§Yเนบิวลา§!§!"
+ requires_shattered_world: "§RRequires a §Y$pc_shattered$§! in the system.§!"
  requires_curator:0 "§RRequires a §YCurator Enclave§! in the system.§!"
  requires_curator_agreement:0 "§RRequires a §YDiplomatic Agreement§! with the local Curator Enclave.§!"
  requires_artist_agreement:0 "§RRequires a §YDiplomatic Agreement§! with the local Artisan Enclave.§!"
@@ -260,7 +261,7 @@
  leviathans.340.name:0 "วิทยาลัยศิลปะ"
  leviathans.340.desc:1 "Brilliant! We were just about to suggest the very same thing to you! If you establish this institution on the starbase in the system you share with us, we shall send some of our finest artists to serve there as teachers."
  leviathans.340.tooltip:0 "We can now build the §HArt College§! Starbase Building in the §Y[artist_system.GetName]§! system."
- leviathans.300.g.opinion:0 "Requires the §YArtisans§! to have:\n£opinion£ Opinion +50"
+ leviathans.300.g.opinion:0 "ต้องการ §YArtisans§! ให้มี:\n£opinion£ ทัศนคติ +50"
  FLEET_MANAGER_VIEW:0 "จัดการกองยาน"
  FLEET_NAME_HEADER:0 "ยาน"
  FLEET_MANAGER_SHIP_DESIGN_COUNT:1 "$FLEET_COUNT|Y$/$TEMPLATE_COUNT|Y$"
@@ -293,7 +294,8 @@
  FLEET_MANAGER_DELETE_TEMPLATE_DIALOG_DESC:2 "คุณต้องการที่จะปลดกองยานนี้?\n\n§Rคำเตือน: การปลดกองยานจะปลดประจำการยานทุกลำที่เกี่ยวข้องกับกองยานนี้§!"
  FLEET_MANAGER_FLEET_NAME_FORMAT:0 "£military_ship£ $FLEET$"
  FLEET_MANAGER_NO_TEMPLATE_SELECTED_HINT:1 "§Eยังไม่ได้เลือกกองยาน§!"
- DISBAND_FM:1 "§Hยุบ§!\n§Gคลิกเพื่อยกเลิกยานรบเหล่านี้§!"
+ DISBAND_FM:1 "§Hยุบ§!"
+ DISBAND_FM_DESC:0 "§Gคลิกเพื่อยกเลิกยานรบเหล่านี้§!"
  REMOVE_FROM_TEMPLATE_FM:0 "§Hลบออกจากเทมเพลต§!\n§Gคลิกเพื่อลบยานรบเหล่านี้ออกจากเทมเพลตกองยาน§!"
  INSPECT_FM:0 "§Hรายละเอียดการออกแบบ§!\n§Gคลิกเพื่อแสดงรายละเอียดเกี่ยวกับการออกแบบยานลำนี้§!"
  RETROFIT_FM:0 "§Hดัดแปลงแก้ไข§!\n§Gคลิกเพื่อสลับการออกแบบนี้เป็นแบบอื่น§!"
@@ -311,7 +313,8 @@
  FLEET_VIEW_RALLY_TROOPS_ENABLED:0 "ปัจจุบัน §Yเปิด§!"
  FLEET_VIEW_RALLY_TROOPS_DISABLED:0 "ปัจจุบัน §Yปิด§!"
  FLEET_VIEW_RALLY_TROOPS_DESC:0 "กองยานนี้สามารถ §Hระดมพล§! ได้ §Hกองทัพจู่โจม§! กองใหม่จะเสริมกำลังมาที่กองยานนี้โดยอัตโนมัติหากมีเส้นทาง"
- FLEET_VIEW_OPEN_FLEET_MANAGER:1 "§Hจัดการกองยาน§!\n§Gคลิกเพื่อเปิดตัวจัดการสำหรับกองยานนี้§!"
+ FLEET_VIEW_OPEN_FLEET_MANAGER:1 "§Hจัดการกองยาน§!"
+ FLEET_VIEW_OPEN_FLEET_MANAGER_CLICK_DESC:0 "§Gคลิกเพื่อเปิดตัวจัดการสำหรับกองยานนี้§!"
  FLEET_VIEW_DESIGN_UPGRADABLE:0 "สามารถอัปเกรดการออกแบบได้"
  OUTLINER_FLEET_UPGRADABLE:0 "สามารถอัปเกรดกองยานนี้ได้"
  OUTLINER_FLEET_REPAIRABLE:0 "สามารถซ่อมกองยานนี้ได้"
@@ -412,7 +415,7 @@
  action.87.name:0 "§RColony Lost!§!"
  action.87.desc:0 "We have lost administrative control of §Y[From.GetName]§! to §Y[new_planet_owner.GetName]§!, who controls the §HStarbase§! in the §Y[From.GetStarName]§! system."
  action.88.name:0 "Colony Gained!"
- action.88.desc:0 "We have gained administrative control §Y[From.GetName]§!, formerly a holding of §Y[former_planet_owner.GetName]§!, because we control the §HStarbase§! in the §Y[From.GetStarName]§! system."
+ action.88.desc:0 "We have gained administrative control of §Y[From.GetName]§!, formerly a holding of §Y[former_planet_owner.GetName]§!, because we control the §HStarbase§! in the §Y[From.GetStarName]§! system."
  apoc.1.name:0 "เกตเวย์ที่ถูกทิ้งร้าง"
  apoc.1.desc:0 "An ancient space station of some kind has been located at the edge of the [gateway_system.GetName] system. The strong residual subspace signature that surrounds the station indicates that it may be a "§HGateway§!" of sorts - part of a theoretical network of similar stations that at some point would have allowed for near-instantaneous travel between different parts of the galaxy.\n\nAssuming this is a Gateway, its current state of disrepair has rendered it unusable. If it could be restored into working order, its owner would potentially be able to access any other functional gateways in the galaxy, enabling travel across huge distances in a matter of days."
  apoc.2.desc:0 "We have encountered another abandoned Gateway, this time in the [gateway_system.GetName] system. Just like the first one, this Gateway is also currently inoperable due to its poor condition."
