--- a/mod/thmod/localisation/english/concepts_l_english.yml
+++ b/mod/thmod/localisation/english/concepts_l_english.yml
@@ -28,7 +28,7 @@
  concept_technology_desc:0 "เทคโนโลยีที่ปลดล็อกโดยการวิจัย เป็นหนึ่งในวิธีการหลักในการเพิ่มความแข็งแกร่งของจักรวรรดิคุณใน Stellaris แบ่งออกเป็นสามสาขาคือ:\n\n$t$['concept_physics_research', £physics£ $concept_physics_research$]\n$t$['concept_society_research', £society£ $concept_society_research$]\n$t$['concept_engineering_research', £engineering£ $concept_engineering_research$]\n\nแหล่งที่มาทั่วไปของ §Iแต้มการวิจัย§! ได้มาจาก £pops£ §Iประชากร§! ที่ทำงานใน §Iห้องแล็บวิจัย§! หรือ §Iสถานีวิจัย§! ที่สร้างขึ้นในพื้นที่ที่เหมาะสม"
  concept_tradition:0 "วัฒนธรรม"
  concept_traditions:0 "วัฒนธรรม"
- concept_traditions_desc:0 "วัฒนธรรมจะให้โบนัสทั่วทั้งจักรวรรดิซึ่งอยู่ในแผนผังวัฒนธรรม การเลือกใช้วัฒนธรรมจะต้องมี['concept_unity', £unity£ $concept_unity$] มากเพียงพอ การเปิดใช้วัฒนธรรมทั้งหมดในกลุ่มวัฒนธรรมจะปลดล็อก['concept_ascension_perks']"
+ concept_traditions_desc:1 "วัฒนธรรมจะให้โบนัสทั่วทั้งจักรวรรดิซึ่งอยู่ในแผนผังวัฒนธรรม การเลือกใช้วัฒนธรรมจะต้องมี$i_unity$ มากเพียงพอ การเปิดใช้วัฒนธรรมทั้งหมดในกลุ่มวัฒนธรรมจะปลดล็อก['concept_ascension_perks']"
  concept_ascension_perk:0 "การยกระดับ"
  concept_ascension_perks:0 "การยกระดับ"
  concept_ascension_perks_desc:0 "การยกระดับให้โบนัสอย่างมีนัยสำคัญต่อจักรวรรดิ ซึ่งจะเปลี่ยนวิธีเล่นไปโดยสิ้นเชิง"
@@ -68,9 +68,9 @@
  concept_unity_desc:0 "เป็นทรัพยากรที่จับต้องไม่ได้ซึ่งแสดงถึงความสอดคล้องและเจตจำนงของสังคม\n\nเอกภาพถูกใช้สำหรับการตัดสินใจภายในของจักรวรรดิหลายอย่าง เช่น การตั้งผู้นำ การตั้งถิ่นฐานใหม่ของประชากร การออกกฎหมายส่วนใหญ่ (['concept_edicts']) และการปลดล็อก ['concept_traditions']\n\nแหล่งที่มาส่วนใหญ่ของเอกภาพได้มาจาก ['concept_factions'] หรือ £pops£ §Iประชากร§! ที่ทำงานในสิ่งปลูกสร้างอย่างเช่น §Yสำนักงานการปกครอง§!, §Yอนุสาวรีย์ชาวพื้นเมืองแต่เริ่มแรก§!, หรือ §Yศาสนสถาน§!"
  concept_edict:0 "ประกาศคำสั่ง"
  concept_edicts:0 "ประกาศคำสั่ง"
- concept_edicts_desc:0 "ประกาศคำสั่งคือการตัดสินใจบางอย่างซึ่งมีผลบังคับใช้ทั่วทั้งจักรวรรดิ โดยการใช้ทรัพยากรหรือจ่ายเป็นค่าบำรุงรักษารายเดือน โดยทั่วไป ค่าใช้จ่ายเหล่านี้จะจ่ายเป็น ['concept_unity', £unity£ $concept_unity$] หรือ ['concept_edict_fund'] แต่คำสั่งบางอย่าง อาจต้องจ่ายเป็นทรัพยากรอื่นๆแทน"
+ concept_edicts_desc:1 "ประกาศคำสั่งคือการตัดสินใจบางอย่างซึ่งมีผลบังคับใช้ทั่วทั้งจักรวรรดิ โดยการใช้ทรัพยากรหรือจ่ายเป็นค่าบำรุงรักษารายเดือน โดยทั่วไป ค่าใช้จ่ายเหล่านี้จะจ่ายเป็น $i_unity$ หรือ ['concept_edict_fund'] แต่คำสั่งบางอย่าง อาจต้องจ่ายเป็นทรัพยากรอื่นๆแทน"
  concept_edict_fund:0 "กองทุนสำหรับประกาศคำสั่ง"
- concept_edict_fund_desc:0 "The Edict Fund is a separate and static pool of £unity£ §IUnity§! for §IEdict§! upkeep.\n\nIf upkeep exceeds the size of the Fund, regular £unity£ §IUnity§! will also be used."
+ concept_edict_fund_desc:1 "The Edict Fund is a separate and static pool of $i_unity$ for §IEdict§! Upkeep.\n\nIf upkeep exceeds the size of the Fund, regular $i_unity$ will also be used."
  concept_faction:0 "กลุ่มการเมือง"
  concept_factions:0 "กลุ่มการเมือง"
  concept_factions_desc:0 "คือกลุ่ม £pops£ §Iประชากร§! ที่มีความต้องการร่วมกันว่าจักรวรรดิควรดำเนินการอะไร-อย่างไร\n\n$POP_FACTIONS_APPROVAL_DESC$"
@@ -83,5 +83,9 @@
  concept_policies_desc:0 "§Iนโยบายต่างๆ§! เป็นการกำหนดทัศนคติของ £empire£ §Iจักรวรรดิ§! เราต่อจักรวรรดิอื่น เป็นวิธีที่เราปฏิบัติต่อ £pops£ พลเมืองของเราและพฤติกรรมใดๆของพลเมืองที่เราถือว่า ยอมรับได้"
  concept_grand_admiral:0 "$DIFFICULTY_GRAND_ADMIRAL$"
  concept_grand_admiral_desc:0 "$DIFFICULTY_GRAND_ADMIRAL_DESC$"
+ concept_archaeology_site: "แหล่งโบราณคดี"
+ concept_archaeology_site_desc: "Archaelogy Sites are remains of ancient civilization, wreckage from battles, and other such sites of interest. They can be excavated by crewed §YScience Ships§! uncovering their secrets."
  concept_alien_zoo:0 "$building_xeno_zoo$"
  concept_alien_zoo_desc:0 "£mod_job_entertainer_add£ งาน $job_entertainer$: §G+1§!\n£mod_job_xeno_zoo_keeper_add£ งาน $job_xeno_zoo_keeper$: §G+1§!\n£mod_job_livestock_zoo_animal_add£ งาน $job_livestock_zoo_animal$: §G+3§!\n\n£job_xeno_zoo_keeper£ $job_xeno_zoo_keeper_plural$ เปลี่ยน $r_consumer_goods$ เป็น £society£ §Yแต้มการวิจัย§! และ $r_amenities$\n$t$$r_amenities$ ถูกผลิตด้วย £job_livestock_zoo_animal£ งาน $job_livestock_zoo_animal$\n$job_entertainer_effect_desc$\n$job_livestock_zoo_animal_effect_desc$\n\n§L$building_xeno_zoo_desc$§!"
+ concept_species_class: "คลาส/ประเภทของเผ่าพันธุ์"
+ concept_species_class_desc: "Species Classes describe a broad category of §ISpecies§! type. Examples include Avian, Reptilian, Fungoid, etc."
