--- a/mod/thmod/localisation/english/dip_messages_l_english.yml
+++ b/mod/thmod/localisation/english/dip_messages_l_english.yml
@@ -912,8 +912,8 @@
  02_DEMAND_VASS_REFUSE:0 "We would never surrender our independence to the likes of you!"
  03_DEMAND_VASS_REFUSE:0 "The [Root.GetName] will never bow to aliens, no matter how noble their intentions."
  04_DEMAND_VASS_REFUSE:0 "We would sooner reduce [Root.Capital.GetName] to ashes than become the puppets of alien filth such as yourselves."
- 01_DEMAND_VASS_PROPOSE:1 "The §Y[Root.GetName]§! is too weak to survive on its own in this hostile galaxy... Submit and become our subject or prepare for war!"
- 02_DEMAND_VASS_PROPOSE:0 "The §Y[Root.GetName]§! is too weak to survive on its own in this hostile galaxy. We will protect you from our harm if you simply agree to be our subject."
+ 01_DEMAND_VASS_PROPOSE:1 "§Y[Root.GetName]§! อ่อนแอเกินกว่าจะอยู่รอดได้ด้วยตัวเองในกาแล็กซีที่มีแต่ศัตรูแห่งนี้... ยอมจำนนและเป็นเมืองขึ้นของเราหรือเตรียมพร้อมสำหรับการทำสงคราม!"
+ 02_DEMAND_VASS_PROPOSE:0 "§Y[Root.GetName]§! อ่อนแอเกินกว่าจะอยู่รอดได้ด้วยตัวเองในกาแล็กซีที่มีแต่ศัตรูแห่งนี้ เราจะปกป้องคุณจากอันตราย เพียงยอมเป็นเมืองขึ้นของเรา"
  01_ASK_FOR_VASS_SELECT:1 "So you wish to become our subjects? Tell me more..."
  01_ASK_FOR_VASS_ACCEPT:0 "Very well, [From.GetAdj], we will protect you as your new overlords."
  01_ASK_FOR_VASS_REFUSE:1 "We do not want you as our subjects. We have other plans for your planets..."
@@ -928,7 +928,7 @@
  02_DEMAND_PROT_REFUSE:0 "$02_DEMAND_VASS_REFUSE$"
  03_DEMAND_PROT_REFUSE:0 "$03_DEMAND_VASS_REFUSE$"
  04_DEMAND_PROT_REFUSE:0 "$04_DEMAND_VASS_REFUSE$"
- 01_DEMAND_PROT_PROPOSE:0 "The §Y[Root.GetName]§! is too weak to survive on its own in this hostile galaxy... Willingly become a [From.GetAdj] protectorate or prepare for war!"
+ 01_DEMAND_PROT_PROPOSE:0 "§Y[Root.GetName]§! อ่อนแอเกินกว่าจะอยู่รอดได้ด้วยตัวเองในกาแล็กซีที่มีแต่ศัตรูแห่งนี้... เต็มใจที่จะเป็นผู้ปกป้อง [From.GetAdj] หรือเตรียมพร้อมสำหรับสงคราม!"
  01_ASK_FOR_PROT_SELECT:0 "So you seek our protection? Tell me more..."
  01_ASK_FOR_PROT_ACCEPT:0 "Very well, [From.GetAdj], we will protect you as your new overlords."
  01_ASK_FOR_PROT_REFUSE:0 "We do not want to be responsible for your well-being. We have other plans for your planets..."
@@ -1284,6 +1284,7 @@
  HM_EMBASSY_SELECT:0 "You wish to establish a connection point to the [Root.GetName]?"
  HM_EMBASSY_PROPOSE:0 "We would like to host a small portion of our consciousness within your borders, for improved external communication."
  HM_EMBASSY_ACCEPT:0 "We approve of this initiative. The new embassy will serve as a link between our one mind and your many."
+ HM_EMBASSY_ACCEPT_GESTALT: "Curious. We will accept your embassy so that our two minds might communicate quicker."
  HM_RECALL_EMBASSY_SELECT:0 "You wish to break your connection to the [Root.GetName]?"
  HM_RECALL_EMBASSY_PROPOSE:0 "Henceforth the [From.GetName] will no longer maintain a portion of itself within [Root.GetAdj] borders."
  HM_RECALL_EMBASSY_ACCEPT:0 "The [Root.GetAdj] emissaries will be removed from our space. Future diplomacy will be arranged via this entity."
