--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -205,16 +205,27 @@
  distar.51.d:0 "$NAME_Euka$"
  distar.51.e:0 "$NAME_Cyto$"
  distar.51.f:0 "$NAME_Boomer$"
+ distar.51.fb: "$NAME_Bloomer$"
  distar.51.g:0 "$NAME_Blaze$"
  distar.51.h:0 "$NAME_Nova$"
  NAME_Bubbles:0 "Bubbles"
+ NAME_Bubbles_seed: "Bubbles (£seed_pod£)""
  NAME_Nyx:0 "Nyx"
+ NAME_Nyx_seed: "Nyx (£seed_pod£)"
  NAME_Renegade:0 "Renegade"
+ NAME_Renegade_seed: "Renegade (£seed_pod£)"
  NAME_Euka:0 "Euka"
+ NAME_Euka_seed: "Euka (£seed_pod£)"
  NAME_Cyto:0 "Cyto"
+ NAME_Cyto_seed: "Cyto (£seed_pod£)"
  NAME_Boomer:0 "Boomer"
+ NAME_Boomer_seed: "Boomer (£seed_pod£)"
+ NAME_Bloomer: "Bloomer"
+ NAME_Bloomer_seed: "Bloomer (£seed_pod£)"
  NAME_Blaze:0 "Blaze"
+ NAME_Blaze_seed: "Blaze (£seed_pod£)"
  NAME_Nova:0 "Nova"
+ NAME_Nova_seed: "Nova (£seed_pod£)"
  distar.51.more:0 "These are all terrible. We should think of something better."
  distar.52.name:0 "Lost Juvenile Amoeba"
  distar.52.desc:0 "Researchers report that the lost Amoeba juvenile found near [From.From.GetName] is no longer following our science fleet. After doing so for the past several weeks, the juvenile reportedly entered a hyperlane via some biological hyperdrive capacity. Perhaps it recognized the terrain, or sensed others of its kind. Or perhaps it simply tired of chasing after our ship.\n\nThough our ships refrained from interacting with the juvenile as instructed, passive scans have led to some revelations regarding the creature's physiology."
@@ -235,13 +246,21 @@
  distar.55.g:0 "$NAME_Bluey$."
  distar.55.h:0 "$NAME_Zeke$."
  NAME_Blitz:0 "Blitz"
+ NAME_Blitz_seed: "Blitz (£seed_pod£)"
  NAME_Zero:0 "Zero"
+ NAME_Zero_seed: "Zero (£seed_pod£)"
  NAME_Kos:0 "Kos"
+ NAME_Kos_seed: "Kos (£seed_pod£)"
  NAME_Deva:0 "Deva"
+ NAME_Deva_seed: "Deva (£seed_pod£)"
  NAME_Amemba:0 "Amemba"
+ NAME_Amemba_seed: "Amemba (£seed_pod£)"
  NAME_Beauregarde:0 "Beauregarde"
+ NAME_Beauregarde_seed: "Beauregarde (£seed_pod£)"
  NAME_Bluey:0 "Old Bluey"
+ NAME_Bluey_seed: "Old Bluey (£seed_pod£)"
  NAME_Zeke:0 "Zeke"
+ NAME_Zeke_seed: "Zeke (£seed_pod£)"
  distar.56.desc:0 "We have developed the ability to break the boundaries of space and time, to travel faster than the speed of light. Yet we cannot decide upon a name for this amoeba.\n\nThis is our last chance."
  distar.56.a:0 "$NAME_Storm$"
  distar.56.b:0 "$NAME_Ghost$"
@@ -736,8 +755,8 @@
  mod_damage_vs_country_type_guardian_scavenger_bot_mult:0 "ทำความเสียหายกับ Scavenger Bot"
  mod_damage_vs_country_type_guardian_elderly_tiyanki_mult:0 "ทำความเสียหายกับ Tiyanki Matriarch"
  opinion_ratling_system_stolen:0 "$NAME_Ketling$ Planet Subdued"
- phaseshifted:0 "Phase-Shifted"
- phaseshifted_desc:0 "This planet shifts between dimensions on a regular period: transforming from a §Y$pc_shrouded$§! to a §Y$pc_gaia$§! and back again. It is unknown what might happen to any settlers on its surface when such a shift occurs."
+ phaseshifted:0 "เฟสมีความเปลี่ยนแปลง"
+ phaseshifted_desc:0 "ดาวเคราะห์ดวงนี้มีการเปลี่ยนแปลงระหว่างมิติต่างๆในช่วงเวลาปกติ: เปลี่ยนจาก §Y$pc_shrouded$§! เป็น §Y$pc_gaia$§! กลับไปกลับมา ไม่มีใครรู้ว่าอาจเกิดอะไรขึ้นกับผู้ตั้งถิ่นฐานบนพื้นผิวดาว เมื่อมีการเปลี่ยนแปลงดังกล่าวเกิดขึ้น"
  nanite_network:0 "Computational Network"
  nanite_network_desc:0 "A computational network of unknown purpose was constructed here by a stream of nanites that emerged from a sealed atomic clock found in the system's asteroid belt."
  NAME_Primitive_Robot:0 "Rudimentary Robot"
@@ -1606,7 +1625,7 @@
  d_aldar_deposit_3:0 "$d_aldar_deposit_1$"
  action.92.part1:0 "The [Root.GetName] has discovered traces of a new §HStrategic Resource§!, dubbed "
  action.92.part2:0 ", during its survey of [From.GetName]."
- action.92.name:0 "§Y[From.GetName]§!: Strategic Resource Discovered"
+ action.92.name:0 "§Y[From.GetName]§!: ทรัพยากรเชิงยุทธศาสตร์ที่ถูกค้นพบ"
  action.92.garanthium:1 "During its survey of [From.GetName], the [Root.GetName] discovered a previously unknown strategic resource dubbed §HGaranthium Ore§!. It can be refined into a metal that is both malleable and durable. This ore would make an excellent material for use in the construction of ships."
  action.92.lythuric:1 "During its survey of [From.GetName], the [Root.GetName] discovered a previously unknown strategic resource dubbed §HLythuric Gas§!. Small concentrations of this gas mixed with fuel should significantly increase the thrust of our starship engines."
  action.92.teldar:1 "During its survey of [From.GetName], the [Root.GetName] discovered a previously unknown strategic resource dubbed §HTeldar Crystals§!. These extremely durable crystals should theoretically enhance the armor-piercing capabilities and destructive potential of our projectile weapons."
@@ -1624,7 +1643,7 @@
  action.92.terraform_gases:1 "During its survey of [From.GetName], the [Root.GetName] discovered large deposits of various rare §HTerraforming Gases§!. With a steady supply of these gases, the process of terraforming planets would become less costly."
  action.92.has_tech:0 "\nWe have the technology - if we control this system, we can extract this resource."
  action.92.no_tech:0 "\nWhile we do not yet possess the means to extract this resource, we should seriously consider establishing control over the system for future exploitation."
- distar.305.name:0 "§Y[FromFrom.GetName]§!: Strategic Resource Discovered"
+ distar.305.name:0 "§Y[FromFrom.GetName]§!: ทรัพยากรเชิงยุทธศาสตร์ที่ถูกค้นพบ"
  distar.305.garanthium:0 "The [Root.GetName] has discovered a previously unknown strategic resource on [FromFrom.GetName], dubbed §HGaranthium Ore§!. It can be refined into a metal that is both malleable and durable. This ore would make an excellent material for use in the construction of ships."
  distar.305.lythuric:0 "The [Root.GetName] has discovered a previously unknown strategic resource on [FromFrom.GetName], dubbed §HLythuric Gas§!. Small concentrations of this gas mixed with fuel should significantly increase the thrust of our starship engines."
  distar.305.teldar:0 "The [Root.GetName] has discovered a previously unknown strategic resource on [FromFrom.GetName], dubbed §HTeldar Crystals§!. These extremely durable crystals should theoretically enhance the armor-piercing capabilities and destructive potential of our projectile weapons."
@@ -1999,6 +2018,8 @@
  UKNOWN_FLEET:0 "Unknown Fleet"
  cannot_jump_to_system:0 "$TRIGGER_FAIL$ Due to roiling subspace tides we can only enter this system through conventional means."
  MESSAGE_POP_ABDUCTED_TITLE:0 "Pop Abducted"
+ MESSAGE_TYPE_POP_ABDUCTED_KEY: "$MESSAGE_POP_ABDUCTED_TITLE$ By Our Fleet"
+ MESSAGE_TYPE_POP_ABDUCTED_FROM_US_KEY: "$MESSAGE_POP_ABDUCTED_TITLE$ By Enemy Fleet"
  MESSAGE_POP_ABDUCTED:0 "A £pop£ §Y$SPECIES$ Pop§! was abducted by our raiding fleet at $PLANET|Y$ and resettled on $TARGET_PLANET|Y$"
  MESSAGE_POP_ABDUCTED_FROM_US:0 "A £pop£ §Y$SPECIES$ Pop§! was abducted from $PLANET|Y$ by the raiding fleets of $ABDUCTER|Y$"
  MESSAGE_PLANET_PROSPECTED_TITLE:0 "Planet Prospected"
