--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -7,7 +7,7 @@
  MESSAGE_CONSTRUCTION_FINISH_STARBASE:0 "ฐานอวกาศ $SYSTEM|Y$ ได้เสร็จสิ้นการก่อสร้างแล้ว"
  MESSAGE_ORDER_FINISH_COLONIZE_PLANET:0 "เราได้ตั้งอาณานิคม $COLONY|Y$ ในระบบดาว $SYSTEM|Y$ แล้ว"
  MESSAGE_SPACEPORT_CONSTRUCTION_MESSAGE_TYPE_TITLE:0 "การก่อสร้างเสร็จสมบูรณ์"
- MESSAGE_STARBASE_CONSTRUCTION_MESSAGE_TYPE_TITLE:0 "การก่อสร้างเสร็จสมบูรณ์"
+ MESSAGE_STARBASE_CONSTRUCTION_MESSAGE_TYPE_TITLE:1 "การก่อสร้างฐานอวกาศเสร็จสมบูรณ์"
  MESSAGE_ARMY_RECRUITMENT_TITLE:0 "Army Recruitment Finished"
  MESSAGE_ARMY_RECRUITMENT:0 "Recruitment of armies has been completed on $PLANET|Y$."
  MESSAGE_POP_CONSTRUCTION_MESSAGE_TYPE_TITLE:0 "$MESSAGE_CONSTRUCTION_MESSAGE_TYPE_TITLE$"
@@ -21,15 +21,17 @@
  MESSAGE_FLEET_ORDER_FINISH_MESSAGE_TYPE_TITLE:0 "คำสั่งกองยานเสร็จสิ้น"
  MESSAGE_SYSTEM_SURVEYED_TITLE:1 "สำรวจระบบโดยละเอียดแล้ว"
  AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE:0 "คำสั่งของยานถูกยกเลิก"
+ AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_KEY: "$AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE$ (Auto-Exploration)"
  MESSAGE_FLEET_ORDER_AUTO_EXPLORE_CANCELED:3 "§Y$FLEET$§! ยกเลิกคำสั่งอัตโนมัติของยานวิจัยวิทยาศาสตร์ ไม่สามารถเข้าถึงหรือหางานอื่นๆเพื่อดำเนินการได้"
- AUTO_EXPLORE_FALLBACK_MESSAGE_TYPE_TITLE:0 "ยานถอยกลับไปสำรวจที่ใหม่"
+ AUTO_EXPLORE_FALLBACK_MESSAGE_TYPE_TITLE:1 "ยานถอยกลับไปสำรวจที่ใหม่"
  MESSAGE_FLEET_ORDER_AUTO_EXPLORE_FALLBACK:1 "§Y$FLEET$§! ไม่สามารถเข้าถึงระบบดาวใดๆ ที่ยังไม่ได้สำรวจได้ แต่จะพยายามสำรวจค้นหาระบบเพิ่มเติม"
  FLEET_BUILD_ORDER_CANCELED_MESSAGE_TYPE_TITLE:0 "$AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE$"
+ FLEET_BUILD_ORDER_CANCELED_MESSAGE_TYPE_KEY: "$FLEET_BUILD_ORDER_CANCELED_MESSAGE_TYPE_TITLE$ (Construction)"
  MESSAGE_FLEET_BUILD_ORDER_CANCELED_MESSAGE:1 "$FLEET|Y$ ไม่สามารถสร้าง $STATION|H$ ในระบบดาว $SYSTEM|Y$ ได้, รับทรัพยากรคืนแล้ว"
  MESSAGE_BYPASS_EXPLORED:0 "รูหนอนที่สำรวจแล้ว"
  BYPASS_EXPLORED_MESSAGE:0 "รูหนอนในระบบดาว $SYSTEM1|Y$ ได้รับการสำรวจแล้ว มันเชื่อมต่อกับระบบดาว $SYSTEM2|Y$"
  MESSAGE_ESN_ARRIVED_TITLE:0 "นำทางด้วยการทดลองทางลัดอวกาศ"
- MESSAGE_ESN_ARRIVED:0 "$FLEET_NAME|Y$ has arrived in the $SYSTEM|Y$ system"
+ MESSAGE_ESN_ARRIVED:0 "$FLEET_NAME|Y$ มาถึงระบบดาว $SYSTEM|Y$ แล้ว"
  MESSAGE_ESN_ABORTED_TITLE:0 "การนำทางด้วยการทดลองทางลัดอวกาศถูกยกเลิก"
  MESSAGE_ESN_ABORTED:0 "$FLEET_NAME|Y$'s order was aborted. The $SYSTEM|Y$ system became unavailable."
  MESSAGE_FLEET_REPARATIONS_DONE_MESSAGE_TYPE_TITLE:0 "การซ่อมแซมเสร็จสมบูรณ์"
@@ -62,7 +64,9 @@
  MESSAGE_TRADE_DEAL_END_MISSING_RESOURCE_TITLE:0 "Trade Deal Ended, We Lack Resources"
  MESSAGE_TRADE_DEAL_END_MISSING_RESOURCE_THEM_TITLE:0 "Trade Deal Ended, They Lack Resources"
  MESSAGE_TRADE_DEAL_END_CANCELLED_ACTION_TITLE:0 "Trade Deal Ended, Trade Action Not Valid"
+ TRADE_DEAL_END_CANCELLED_ACTION_KEY: "Trade Deal Ended, Invalid for Our Empire"
  MESSAGE_TRADE_DEAL_END_CANCELLED_ACTION_THEM_TITLE:0 "Trade Deal Ended, Trade Action Not Valid"
+ TRADE_DEAL_END_CANCELLED_ACTION_THEM_KEY: "Trade Deal Ended, Invalid for Other Empire"
  MESSAGE_TRADE_DEAL_END_CLOSED_BORDERS_TITLE:0 "Trade Deal Ended, We closed our borders"
  MESSAGE_TRADE_DEAL_END_CLOSED_BORDERS_THEM_TITLE:0 "Trade Deal Ended, They closed their borders"
  MESSAGE_TRADE_DEAL_END_GUARANTEE_ALLIANCE_TITLE:0 "Trade Deal Ended, We Entered An Alliance"
@@ -151,7 +155,7 @@
  DIPLO_ACTION_LEAVE_ALLIANCE_DESC:0 "$COUNTRY|Y$ ออกจาก $ALLIANCE|Y$"
  DIPLO_ACTION_LEAVE_FEDERATION_DESC:0 "$COUNTRY|Y$ ออกจาก $ALLIANCE|Y$"
  MESSAGE_DEMAND_SUBJUGATION_TITLE:1 "ต้องการให้เป็นบริวาร(เมืองขึ้น)"
- MESSAGE_ASK_TO_BECOME_SUBJUGATED_TITLE:1 "Subjugation Request"
+ MESSAGE_ASK_TO_BECOME_SUBJUGATED_TITLE:1 "ความต้องการลังจากการพิชิต"
  MESSAGE_ASK_TO_BE_RELEASED_SUBJECT_TITLE:0 "Subject Release Request"
  MESSAGE_FORM_FEDERATION_TITLE:0 "คำขอจัดตั้งสหพันธ์"
  MESSAGE_INVITE_TO_FEDERATION_TITLE:0 "คำเชิญของสหพันธ์"
@@ -197,8 +201,8 @@
  ACTION_OFFER_PEACE_NOTIFICATION:1 "§H[From.GetName]§! ทำข้อตกลงสงบศึกกับ §H[Root.GetName]§!"
  ACTION_INVITE_TO_ALLIANCE_NOTIFICATION:2 "§H[Root.GetName]§! joined the §H[From.GetAllianceName]§!.\n\nThey will now stand unified against their enemies."
  ACTION_LEAVE_ALLIANCE_NOTIFICATION:2 "§H[From.GetName]§! left the §H[From.GetAllianceName]§!.\n\nThis may represent opportunity for us..."
- ACTION_DEMAND_SUBJUGATION_NOTIFICATION:3 "§H[From.GetName]§! subjugated §H[Root.GetName]§!.\n\nThey have given up their freedom in exchange for safety."
- ACTION_ASK_TO_BECOME_SUBJUGATED_NOTIFICATION:3 "§H[Root.GetName]§! subjugated §H[From.GetName]§!.\n\nThey have given up their freedom in exchange for safety."
+ ACTION_DEMAND_SUBJUGATION_NOTIFICATION:3 "§H[From.GetName]§! ปราบ §H[Root.GetName]§!\n\nพวกเขาสละอิสรภาพเพื่อแลกกับความปลอดภัย"
+ ACTION_ASK_TO_BECOME_SUBJUGATED_NOTIFICATION:3 "§H[Root.GetName]§! ปราบ §H[From.GetName]§!\n\nพวกเขาสละอิสรภาพเพื่อแลกกับความปลอดภัย"
  ACTION_FORM_FEDERATION_NOTIFICATION:2 "§H[From.GetAllianceName]§! voted to a form a $FEDERATION$.\n\nThey have chosen to go into the galaxy together as one."
  ACTION_INVITE_TO_FEDERATION_NOTIFICATION:2 "§H[Root.GetName]§! joined the §H[From.GetAllianceName]§!.\n\nThey will now stand unified against their enemies."
  ACTION_ASK_TO_JOIN_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! joined the §H[Root.GetAllianceName]§!.\n\nThey will now stand unified against their enemies."
@@ -221,7 +225,7 @@
  ACTION_FORM_RESEARCH_AGREEMENT_NOTIFICATION:0 "§H[From.GetName]§! ทำข้อตกลงการวิจัยกับ §H[Root.GetName]§!\n\nพวกเขาอาจเรียนรู้ซึ่งกันและกันได้มากขึ้น"
  ACTION_BREAK_RESEARCH_AGREEMENT_NOTIFICATION:0 "§H[From.GetName]§! ยกเลิกข้อตกลงการวิจัยกับ §H[Root.GetName]§!\n\nดูเหมือนว่าพวกเขาไม่ต้องการเปิดเผยความลับอีกต่อไป..."
  ACTION_FORM_MIGRATION_PACT_NOTIFICATION:1 "§H[From.GetName]§! ทำสนธิสัญญาการย้ายถิ่นฐานกับ §H[Root.GetName]§!\n\nตอนนี้ประชากรของพวกเขาสามารถเคลื่อนย้ายได้อย่างอิสระระหว่างสองจักรวรรดิ"
- ACTION_BREAK_MIGRATION_PACT_NOTIFICATION:1 "§H[From.GetName]§! broke their Migration Treaty with §H[Root.GetName]§!.\n\nIt seems they have come to regret their open borders."
+ ACTION_BREAK_MIGRATION_PACT_NOTIFICATION:1 "§H[From.GetName]§! ยกเลิกสนธิสัญญาการย้ายถิ่นฐานที่ทำกับ §H[Root.GetName]§!\n\nดูเหมือนว่าพวกเขาจะเสียดายกับการเปิดเขตแดนต่อกัน"
  ACTION_GUARANTEE_INDEPENDENCE_NOTIFICATION:1 "§H[From.GetName]§! ตอนนี้จะรับประกันความเป็นอิสระของ §H[Root.GetName]§!\n\nตอนนี้พวกเขาจะปกป้องอีกฝ่ายจากการโจมตีทั้งหมด"
  ACTION_BREAK_GUARANTEE_NOTIFICATION:1 "§H[From.GetName]§! stopped guaranteeing the independence of §H[Root.GetName]§!.\n\nThis may represent opportunity for us..."
  ACTION_SUPPORT_INDEPENDENCE_NOTIFICATION:1 "§H[From.GetName]§! will now support the independence of §H[Root.GetName]§!.\n\nTheir overlord must be none too pleased..."
@@ -248,7 +252,9 @@
  MESSAGE_OUR_SURRENDER_TITLE:0 "เรายอมแพ้"
  MESSAGE_THEIR_SURRENDER_TITLE:0 "พวกเขายอมแพ้"
  MESSAGE_VICTORY_TITLE:1 "§Gชัยชนะ§!"
+ VICTORY_KEY: "Victory"
  MESSAGE_DEFEAT_TITLE:1 "§Rพ่ายแพ้§!"
+ DEFEAT_KEY: "Defeat"
  MESSAGE_ALLIED_ENTERED_WAR:1 "The $ATTACKER|Y$ has declared war on our ally, the $CALLER|Y$.\n\nConsequently, we are now §Yat war§! with the $ATTACKER|Y$!"
  MESSAGE_GUARANTEED_ENTERED_WAR:0 "Guaranteed is under attack"
  MESSAGE_GUARANTEER_ENTERED_WAR_DESC:1 "The $ATTACKER|Y$ has declared war on $CALLER|Y$, whose independence we have guaranteed.\n\nConsequently, we are now §Yat war§! with the $ATTACKER|Y$!"
@@ -295,7 +301,7 @@
  MESSAGE_LEADER_DEATH_TITLE:0 "ผู้นำเสียชีวิต"
  MESSAGE_LEADER_RETIRED_TITLE:0 "ผู้นำเกษียณ"
  MESSAGE_RULER_ELECTED_TITLE:0 "ผู้ปกครองได้รับเลือก"
- MESSAGE_RULER_ELECTED_UNTIL_DEATH_TITLE:0 "ผู้ปกครองได้รับเลือก"
+ MESSAGE_RULER_ELECTED_UNTIL_DEATH_TITLE:1 "ผู้ปกครองได้รับเลือกจนกว่าจะเสียชีวิต"
  MESSAGE_RULER_ELECTED_HEIR_TITLE:0 "ครองราชย์สำเร็จ"
  MESSAGE_ELECTION_MESSAGE_TYPE_TITLE:0 "การเลือกตั้ง"
  MESSAGE_DEMOCRATIC_ELECTION_DESC:0 "การรณรงค์เพื่อเลือกตั้ง$TITLE$คนใหม่กำลังดำเนินอยู่\nประกาศผลในวันที่ $DATE|Y$"
@@ -316,6 +322,7 @@
  LEADER_GENERAL_HOSTILE_KILLED_EXPERIENCE:0 "§THostile Forces Destroyed: $VAL|0H$ experience§!"
  LEADER_GENERAL_FRIENDLY_LOST_EXPERIENCE:0 "§TFriendly Forces Lost: $VAL|0H$ experience§!"
  MESSAGE_NEW_HEIR_TITLE:0 "§Hรัชทายาทคนใหม่§!"
+ NEW_HEIR_KEY: "New Heir"
  NEW_HEIR_TEXT:0 "§Y$HEIR$§! เป็นรัชทายาทคนใหม่ของจักรวรรดิและจะครองบัลลังก์เมื่อผู้ปกครองคนปัจจุบันของเราสิ้นพระชนม์"
  MESSAGE_LEADER_POOL_REFRESHED_MESSAGE_TYPE_TITLE:0 "กลุ่มผู้นำถูกรีเฟรช"
  LEADER_POOL_REFRESHED_TITLE:0 "กลุ่มผู้นำจักรวรรดิของคุณได้รับการรีเฟรชแล้ว คุณมีผู้นำคนใหม่ที่คุณสามารถจ้างได้"
@@ -370,6 +377,10 @@
  SPECIAL_PROJECT_AVAILABLE:0 "โครงการพิเศษสำหรับการวิจัย"
  MESSAGE_EVENT_MESSAGE_TYPE_TITLE:0 "เหตุการณ์"
  MESSAGE_INVASION_TITLE:0 "การบุกได้จบลงแล้ว"
+ INVASION_ATTACKER_WIN_KEY: "$MESSAGE_INVASION_TITLE$ (Invasion Successful)"
+ INVASION_ATTACKER_LOSE_KEY: "$MESSAGE_INVASION_TITLE$ (Invasion Failed)"
+ INVASION_DEFENDER_WIN_KEY: "$MESSAGE_INVASION_TITLE$ (Defensive Successful)"
+ INVASION_DEFENDER_LOSE_KEY: "$MESSAGE_INVASION_TITLE$ (Defensive Failed)"
  MESSAGE_INVASION_ATTACKER_WIN:1 "เราบุก $PLANET|Y$! ได้สำเร็จ"
  MESSAGE_INVASION_ATTACKER_LOSE:0 "การบุกรุก $PLANET|H$ ของเราล้มเหลว"
  MESSAGE_INVASION_DEFENDER_WIN:1 "We successfully fended off the invaders on $PLANET|Y$!"
