--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ MODIFIER_BULLET_POINT: "- "
  MOD_FEDERATION_EXPERIENCE_ADD:0 "ประสบการณ์ต่อเดือน"
  MOD_FEDERATION_COHESION_ADD:0 "ความสัมพันธ์ในสหพันธ์ต่อเดือน"
  MOD_FEDERATION_COHESION_ETHICS_PENALTY_MULT:0 "โทษของจริยธรรมที่แตกต่างกันของสมาชิกที่มีผลต่อความสัมพันธ์ในสหพันธ์"
@@ -42,12 +43,15 @@
  MOD_COUNTRY_MINING_STATION_COST_MULT:0 "ค่าสถานีขุด"
  MOD_COUNTRY_RESEARCH_STATION_COST_MULT:0 "ค่าสถานีวิจัย"
  MOD_COUNTRY_SHIP_UPGRADE_COST_MULT:0 "ค่าใช้จ่ายในการอัปเกรดยาน"
- MOD_COUNTRY_LEADER_POOL_SIZE:0 "จำนวนผู้นำที่สามารถเลือกได้ (ตอนเลือกจ้าง)"
- MOD_COUNTRY_EXTERNAL_LEADER_POOL_SIZE:0 "ขนาดกลุ่มผู้นำจากภายนอก"
+ MOD_COUNTRY_LEADER_POOL_SIZE:0 "จำนวนผู้นำที่สามารถเลือกได้"
+ MOD_COUNTRY_EXTERNAL_LEADER_POOL_SIZE:0 "จำนวนผู้นำที่สรรหาจากภายนอก"
  MOD_COUNTRY_CORE_SECTOR_SYSTEM_CAP:0 "ระบบของเซ็กเตอร์แกนกลาง"
  MOD_COUNTRY_SECTOR_CAP_ADD:0 "ขีดจำกัดของเซ็กเตอร์"
  mod_country_base_energy_produces_mult:0 "การสร้างพลังงานของจักรวรรดิ"
  mod_country_base_minerals_produces_mult:0 "การผลิตแร่ของจักรวรรดิ"
+ mod_country_base_consumer_goods_produces_add: "Empire Consumer Goods Production"
+ mod_country_base_alloys_produces_add: "Empire Alloys Production"
+ mod_country_base_nanites_produces_add: "Empire Nanites Production"
  MOD_ASSIST_RESEARCH_MULT:1 "ช่วยเพิ่มประสิทธิภาพการวิจัย"
  MOD_COUNTRY_NUM_TECH_ALTERNATIVES_ADD:0 "ทางเลือกในการวิจัย"
  MOD_COUNTRY_PREVIOUS_DEALS:0 "ตกลงก่อนหน้า"
@@ -83,6 +87,9 @@
  MOD_DIPLO_WEIGHT_POPS_MULT:0 "น้ำหนักทางการทูตจากประชากร"
  MOD_DIPLO_WEIGHT_ENVOYS_MULT:0 "น้ำหนักทางการทูตจากทูต"
  MOD_DIPLO_WEIGHT_COUNCIL_MULT:0 "น้ำหนักทางการทูตจากสภา"
+ MOD_DIPLO_WEIGHT_OPPOSING_MULT: "Diplomatic Weight When Opposing Resolutions"
+ MOD_DIPLO_WEIGHT_SUPPORTING_MULT: "Diplomatic Weight When Supporting Resolutions"
+ MOD_DIPLO_WEIGHT_RIVALS_MULT: "Diplomatic Weight Per Rival"
  MOD_DIPLO_WEIGHT_MULT:0 "น้ำหนักทางการทูต"
  MOD_DISTANCE_TO_CAPITAL_STATIC_MODIFIER_EFFICIENCY_MULT:0 "โทษเนื่องจากระยะห่างจากศูนย์กลางจักรวรรดิ (Capital)"
  MOD_COUNTRY_ASCENSION_PERKS_ADD:1 "ปลดล็อกการยกระดับ"
@@ -154,9 +161,15 @@
  MOD_POP_ROBOT_BUILD_SPEED_MULT:0 "ความเร็วในการสร้างหุ่นยนต์"
  MOD_POP_ROBOT_BUILD_SPEED_MULT_DESC:0 "Affects the speed at which robotic Pops are built."
  MOD_POP_ROBOT_BUILD_COST_MULT:0 "ค่าใช้จ่ายในการสร้างหุ่นยนต์"
+ mod_planet_pops_robotics_alloys_upkeep_add: "Robot Alloy Upkeep"
  mod_pop_job_trade_mult:0 "£trade_value£ มูลค่าการค้าจาก £job£ งาน"
  mod_pop_lifestyle_trade_mult:0 "£trade_value£ มูลค่าการค้าจากมาตรฐานความเป็นอยู่"
  mod_pop_job_amenities_mult:0 "£amenities£ ความอยู่ดีกินดีจาก £job£ งาน"
+ mod_living_standard_trade_value_rulers_add: "£trade_value£ Trade Value from $RULERS$"
+ mod_living_standard_trade_value_specialists_add: "£trade_value£ Trade Value from $SPECIALISTS$"
+ mod_living_standard_trade_value_workers_add: "£trade_value£ Trade Value from $WORKERS$"
+ mod_living_standard_trade_value_slaves_add: "£trade_value£ Trade Value from $SLAVES$"
+ mod_living_standard_trade_value_criminals_add: "£trade_value£ Trade Value from $CRIMINALS$"
  mod_job_soldier_stability_add:1 "เสถียรภาพจากงาน £job_soldier£ [GetSoldier] [GetSoldierPlural]"
  MOD_COUNTRY_COLONY_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในอาณานิคม"
  MOD_COUNTRY_CLAIM_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการอ้างสิทธิ์"
@@ -266,8 +279,8 @@
  MOD_SHIP_SHIELD_HP_MULT:0 "HP โล่พลังงาน"
  MOD_SHIP_SHIELD_ADD:0 "$MOD_SHIP_SHIELD_HP_ADD$"
  MOD_SHIP_SHIELD_MULT:0 "$MOD_SHIP_SHIELD_HP_MULT$"
- MOD_SHIP_SHIELD_REDUCTION:0 "การลบล้างโล่พลังงาน"
- MOD_SHIP_ARMOR_REDUCTION:0 "การลบล้างเกราะ"
+ MOD_SHIP_SHIELD_REDUCTION:0 "ลบล้างโล่พลังงาน"
+ MOD_SHIP_ARMOR_REDUCTION:0 "ลบล้างเกราะ"
  MOD_SHIP_SPEED_REDUCTION:0 "การลดความเร็วต่ำกว่าแสง"
  MOD_SHIP_HULL_REGEN_ADD_PERC:0 "การฟื้นฟูตัวยานรายวัน"
  MOD_SHIP_HULL_REGEN_ADD_STATIC:0 "$MOD_SHIP_HULL_REGEN_ADD_PERC$"
@@ -439,6 +452,8 @@
  mod_planet_building_foundry_1_build_speed_mult:0 "ความเร็วในการสร้างโรงหล่อ"
  mod_planet_building_factory_1_build_speed_mult:0 "ความเร็วในการสร้างโรงงาน"
  mod_planet_building_research_lab_1_build_speed_mult:0 "ความเร็วในการสร้างห้องวิจัย"
+ mod_planet_building_research_lab_2_build_speed_mult: "Research Complex Build Speed"
+ mod_planet_building_research_lab_3_build_speed_mult: "Advanced Research Complexes Build Speed"
  mod_planet_building_refinery_build_speed_mult:0 "ความเร็วในการสร้างโรงงานสกัด"
  mod_planet_building_chemical_plant_build_speed_mult:0 "ความเร็วในการสร้างโรงงานเคมี"
  mod_planet_building_crystal_plant_build_speed_mult:0 "ความเร็วในการสร้างโรงงานผลึก"
@@ -575,6 +590,7 @@
  mod_planet_resource_influence_add:0 "ค่าอิทธิพลที่ได้รับจากดาวเคราะห์"
  mod_country_base_influence_produces_mult:0 "ได้รับค่าอิทธิพลของจักรวรรดิ"
  mod_rivalries_influence_produces_mult:0 "ได้รับค่าอิทธิพลของจักรวรรดิคู่แข่ง"
+ mod_rivalries_unity_produces_add: "£unity£ $unity$ จากการแข่งขัน"
  mod_country_resource_physics_research_mult:0 "การวิจัยทางฟิสิกส์"
  mod_country_resource_society_research_mult:0 "การวิจัยทางสังคม"
  mod_country_resource_engineering_research_mult:0 "การวิจัยทางวิศวกรรม"
@@ -662,6 +678,8 @@
  mod_ship_science_cost_mult:0 "ค่าใช้จ่ายในการสร้างยานวิจัยวิทยาศาสตร์"
  mod_ship_constructor_cost_mult:0 "ค่าใช้จ่ายในการสร้างยานก่อสร้าง"
  mod_ship_colonizer_cost_mult:0 "ค่าใช้จ่ายในการสร้างยานอาณานิคม"
+ mod_ship_colonizer_food_cost_add: "Colony Ship £food£ Food Build Cost"
+ mod_ship_colonizer_alloys_cost_mult: "Colony Ship £alloys£ Alloys Build Cost"
  mod_ship_military_station_medium_cost_mult:0 "ค่าใช้จ่ายในการสร้างสถานีป้องกัน"
  mod_ship_military_station_large_cost_mult:0 "ค่าใช้จ่ายในการสร้างป้อม"
  mod_ship_terraform_station_cost_mult:0 "ค่าใช้จ่ายในการสร้างสถานีปรับสภาพดาว"
@@ -724,11 +742,12 @@
  mod_weapon_type_space_fauna_weapon_fire_rate_mult:1 "อัตราการยิงอาวุธของสัตว์ในอวกาศ"
  mod_weapon_archaeotech_weapon_damage_mult:0 "พลังโจมตีอาวุธจากเทคโนโลยีโบราณคดี"
  mod_weapon_archaeotech_weapon_fire_rate_mult:1 "อัตราการยิงอาวุธจากเทคโนโลยีโบราณคดี"
- mod_shroud_delve_cooldown:0 "คูลดาวน์การล้วงหาข้อมูลสิ่งที่แอบซ่อน"
+ mod_shroud_delve_cooldown:0 "คูลดาวน์การล้วงหาข้อมูลดินแดนพลังจิตบริสุทธิ์"
+ mod_shroud_delve_cost: "Shroud Delve Cost"
  s_slot:0 "ช่องใส่ชิ้นส่วนขนาดเล็ก"
  m_slot:0 "ช่องใส่ชิ้นส่วนขนาดกลาง"
  l_slot:0 "ช่องใส่ชิ้นส่วนขนาดใหญ่"
- x_slot:0 "ช่องใส่ชิ้นส่วนขนาดใหญ่มาก"
+ x_slot:1 "ช่องใส่ชิ้นส่วนขนาดใหญ่พิเศษ"
  t_slot:0 "ช่องใส่ชิ้นส่วนไททัน"
  g_slot:0 "ช่องใส่ชิ้นส่วนตอร์ปิโด"
  mod_s_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธขนาดเล็ก"
@@ -737,8 +756,8 @@
  mod_m_slot_weapon_fire_rate_mult:1 "อัตราการยิงช่องอาวุธขนาดกลาง"
  mod_l_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธขนาดใหญ่"
  mod_l_slot_weapon_fire_rate_mult:1 "อัตราการยิงช่องอาวุธขนาดใหญ่"
- mod_x_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธขนาดใหญ่มาก"
- mod_x_slot_weapon_fire_rate_mult:1 "อัตราการยิงช่องอาวุธขนาดใหญ่มาก"
+ mod_x_slot_weapon_damage_mult:1 "พลังโจมตีจากช่องใส่ชิ้นส่วนขนาดใหญ่พิเศษ"
+ mod_x_slot_weapon_fire_rate_mult:2 "อัตราการยิงจากช่องใส่ชิ้นส่วนขนาดใหญ่พิเศษ"
  mod_t_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธไททัน"
  mod_t_slot_weapon_fire_rate_mult:1 "อัตราการยิงช่องอาวุธไททัน"
  mod_g_slot_weapon_damage_mult:0 "พลังโจมตีช่องอาวุธตอร์ปิโด"
@@ -1009,16 +1028,16 @@
  triggered_opinion_both_machine_intelligence:0 "Fellow Machine Intelligence"
  triggered_dc_opinion_of_servitors:0 "Oppressors"
  triggered_dc_opinion_of_assimilators:0 "$triggered_dc_opinion_of_servitors$"
- triggered_opinion_xenophobia:0 "Xenophobia"
+ triggered_opinion_xenophobia:0 "กลัวต่างดาว"
  triggered_opinion_xenophobes:0 "Xenophobic Bigots"
- triggered_opinion_xenophilia:0 "Xenophilia"
- triggered_opinion_xenophiles:0 "Xenophile Diplomacy"
+ triggered_opinion_xenophilia:0 "ชื่นชอบชาวต่างดาว"
+ triggered_opinion_xenophiles:0 "การทูตที่ชอบต่างดาว"
  triggered_opinion_xenophage:0 "Xenophages"
  opinion_biophage:0 "Biophages"
- triggered_opinion_of_materialist:0 "Materialist Fools"
+ triggered_opinion_of_materialist:0 "วัตถุนิยมโง่เขลา"
  triggered_opinion_of_materialist_pos:0 "Bright Materialists"
- triggered_opinion_of_spiritualist:0 "Spiritualist Fools"
- triggered_opinion_of_spiritualist_pos:0 "Wise Spiritualists"
+ triggered_opinion_of_spiritualist:0 "ลัทธิจิตวิญญาณโง่เขลา"
+ triggered_opinion_of_spiritualist_pos:0 "ผู้มีจิตวิญญาณชาญฉลาด"
  triggered_opinion_of_egalitarian_pos:0 "Free Egalitarianists"
  triggered_opinion_of_pacifist_pos:0 "Enlightened Pacifists"
  triggered_opinion_of_egalitarian:1 "Egalitarian Rabble"
@@ -1142,7 +1161,7 @@
  encroaching_scientists:0 "Encroaching Scientists"
  opinion_shade_giver:0 "Shade-Giver"
  opinion_ceded_starbase:0 "เคารพเรื่องพรมแดน"
- opinion_not_ceded_starbase:0 "Borders Disrespected"
+ opinion_not_ceded_starbase:0 "ไม่เคารพเรื่องพรมแดน"
  opinion_respect_independence:0 "Independence Respected"
  opinion_disrespect_independence:0 "Independence Disrespected"
  triggered_opinion_tr_versatility_universal_compatibility:0 "$tr_versatility_universal_compatibility$"
@@ -1272,7 +1291,7 @@
  allow_slavery_desc:0 ""
  ftl_credit_trading:0 "Allow FTL Credit-Trading"
  ftl_credit_trading_desc:0 ""
- utopian_abundance:0 "Utopian Abundance"
+ utopian_abundance:0 "ความอุดมสมบูรณ์ของชาวยูโทเปีย"
  utopian_abundance_desc:0 ""
  bio_asset_optimization:0 "Bio-Asset Optimization"
  bio_asset_optimization_desc:0 ""
@@ -1285,7 +1304,7 @@
  low_gravity:0 "แรงโน้มถ่วงต่ำ"
  low_gravity_desc:0 "This planet has an unusually low density and therefore much lower gravity than most planets of comparable size."
  high_gravity:0 "แรงโน้มถ่วงสูง"
- high_gravity_desc:0 "This planet is unusually dense and so has uncomfortably high gravity."
+ high_gravity_desc:1 "This planet is unusually dense and so has uncomfortably high gravity."
  hollow_planet:0 "Hollow Planet"
  hollow_planet_desc:0 "This planet has either been artificially created or was somehow hollowed out. How or why we do not know, but investigating it promises to be fascinating."
  mineral_rich:1 "แร่ธาตุคุณภาพสูง"
@@ -1527,6 +1546,6 @@
  MOD_CATAPULT_RANGE_MULT:0 "เครื่องเหวี่ยงกองยานควอนตัม ระยะทำการ"
  mod_quantum_catapult_megastructure_bypass_windup_mult:0 "เครื่องเหวี่ยงกองยานควอนตัม สิ้นสุด"
  mod_country_society_research_cost_mult:0 "Society research Upkeep"
- mod_country_consumer_goods_cost_mult:0 "Consumer goods upkeep"
+ mod_country_consumer_goods_cost_mult:0 "ค่าบำรุงรักษาที่เป็นสินค้าอุปโภคบริโภค"
  contact_with_MSI_01:1 "Troubled Past"
  contact_with_MSI_02:1 "$contact_with_MSI_01$"
