--- a/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
@@ -3,7 +3,7 @@
  NAME_Armistice_Initiative:0 "Armistice Initiative"
  NAME_Awoken:0 "Awoken"
  NAME_Commonwealth_of_Man:0 "Commonwealth of Man"
- NAME_Creatures_of_the_Shroud:0 "Creatures of the Shroud"
+ NAME_Creatures_of_the_Shroud:0 "สิ่งมีชีวิตจากดินแดนพลังจิตบริสุทธิ์"
  NAME_Cunning_Pirates:0 "Cunning Pirates"
  NAME_Deformed_Creatures:0 "Deformed Creatures"
  NAME_Demonic_Creatures:0 "Daemonic Creatures"
@@ -25,7 +25,7 @@
  NAME_Spawning_Dragons:0 "Freed Dragons"
  NAME_Subterranean_Nation:0 "Subterranean Nation"
  NAME_The_Loop:0 "The Loop"
- NAME_The_Shroud:0 "The Shroud"
+ NAME_The_Shroud:0 "ดินแดนพลังจิตบริสุทธิ์"
  NAME_Titanic_Life:0 "Titanic Life"
  NAME_Unknown_Ancientry:0 "Unknown Ancientry"
  NAME_Unscrupulous_Salvagers:0 "Unscrupulous Salvagers"
@@ -92,7 +92,7 @@
  NAME_Autonomous_Drone:0 "Autonomous Drone"
  NAME_Burnt_Out_Science_Ship:0 "Burnt-Out Science Ship"
  NAME_Conceptual_Ship:0 "Ship as Concept"
- NAME_Corrupted_Avatar:0 "Corrupted Avatar"
+ NAME_Corrupted_Avatar:0 "อวตารที่เสียหาย"
  NAME_Dark_Wanderer:0 "Dark Wanderer"
  NAME_Dimensional_Horror:0 "Dimensional Horror"
  NAME_enigmatic_cache:0 "Enigmatic Cache"
@@ -258,6 +258,7 @@
  NAME_Nesting_Crystals:0 "Nesting Crystals"
  NAME_Shard:0 "Shard"
  NAME_Space_Amoeba_plural:0 "อะมีบาอวกาศ"
+ NAME_Space_Amoeba_plural_seed: "Space Amoebae (£seed_pod£)"
  NAME_Stellarite_Devourer:0 "Stellarite Devourer"
  NAME_Subspace_Rupture_Cloud_1:0 "Subspace Rupture XV-990"
  NAME_Subspace_Rupture_Cloud_2:0 "Subspace Rupture R-5921"
