--- a/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
@@ -62,7 +62,24 @@
  NAME_Earth_Habitat:0 "Earth Habitat"
  NAME_Mars_Habitat:0 "Mars Habitat"
  NAME_Saturn_Habitat:0 "Saturn Habitat"
- NAME_Luna_Habitat:0 "New Luna Habitat"
+ titawin_init_NAME: "$NAME_Titawin$"
+ titawin_init_DESC: "The Federated Theian Preservers' starting solar system.\n\n$system_initializer_DESC$"
+ NAME_Titawin: "Titawin"
+ NAME_Titawin_A: "Titawin A"
+ NAME_Titawin_B: "Titawin B"
+ NAME_Saffar: "Saffar"
+ NAME_Samh: "Samh"
+ NAME_Majriti: "Majriti"
+ NAME_Curiel: "Curiel"
+ NAME_Theia: "Theia"
+ NAME_Akal_Amectuh: "Akal Amec"
+ NAME_Yessefsi: "Yessef"
+ NAME_PHS_01: "PHS-01"
+ NAME_PHS_02: "PHS-02"
+ NAME_PHS_03: "PHS-03"
+ NAME_PHS_04: "PHS-04"
+ NAME_Luna_Habitat:1 "Sol Habitat Complex"
+ NAME_Gaea: "Gaea"
  NAME_Final_Egress:0 "Terminal Egress"
  NAME_Sel-Ufaan:0 "Sel-Ufaan"
  NAME_Ten-Aard-Shel:0 "Ten-Aard-Shel"
@@ -203,7 +220,9 @@
  NAME_Theresior:0 "Theresior"
  NAME_Pesior:0 "Pesior"
  NAME_Amoeba_Swarm:0 "Amoeba Swarm"
+ NAME_Amoeba_Swarm_seed: "Amoeba Swarm (£seed_pod£)"
  NAME_Space_Amoeba_Hunters:0 "Hunter Space Amoebas"
+ NAME_Space_Amoeba_Hunters_seed: "Hunter Space Amoebas (£seed_pod£)"
  NAME_Prism:0 "Prism"
  NAME_Crystal_Nidus:0 "Crystal Nidus"
  NAME_Kappa:0 "Kappa"
@@ -232,6 +251,7 @@
  NAME_Yormak's_Tusk:0 "Yormak's Tusk"
  NAME_Placid_Leviathans:0 "Placid Leviathans"
  NAME_Tiyanki_Space_Whale:0 "Tiyanki Space Whale"
+ NAME_Tiyanki_Space_Whale_seed: "Tiyanki Space Whale (£seed_pod£)"
  NAME_Tiyanki_Bull:0 "Tiyanki Bull"
  NAME_Tiyanki_Cow:0 "Tiyanki Cow"
  NAME_Tiyanki_Hatchling:0 "Tiyanki Hatchling"
@@ -327,7 +347,7 @@
  NAME_Snaara:0 "Snaara"
  NAME_Straeng:0 "Straeng"
  NAME_Stykkia:0 "Stykkia"
- NAME_Gardeners:0 "Audon Caretakers"
+ NAME_Fruitful:0 "Audon Caretakers"
  NAME_Wenkwort_Keeper:0 "Audon Custodian"
  NAME_Wenkwort_Keeper_plural:0 "Audon Custodians"
  NAME_Warder_of_the_Ruins:0 "Warder of the Ruins"
@@ -356,6 +376,7 @@
  NAME_Parvus:0 "Parvus"
  NAME_Fumongus_System:0 "Orvall"
  NAME_Grazing_Tiyanki:0 "Grazing Tiyanki"
+ NAME_Grazing_Tiyanki_seed: "Grazing Tiyanki (£seed_pod£)"
  NAME_Fumongus_Star:0 "Cozmog-1"
  NAME_Fumongus_Planet01:0 "Blem-Cel"
  NAME_Fumongus_Planet02:0 "Gae-Mig"
@@ -397,3 +418,14 @@
  NAME_Holibrae:0 "Holibrae"
  NAME_Holibrae_Corps:0 "Holibrae Corps"
  NAME_Holibrae_Destroyer:0 "Holibrae Destroyer"
+ NAME_Parking_Orbit_White_Dwarf: "Parking Orbit: White Dwarf Zone"
+ NAME_Parking_Orbit_Main_Sequence: "Parking Orbit: Main Sequence Zone"
+ NAME_Star_Mall: "Star Mall"
+ NAME_Parking_Orbit_Magnetar: "Parking Orbit: Magnetar Zone"
+ NAME_Parking_Orbit_Black_Hole: "Parking Orbit: Black Hole Zone"
+ NAME_Parking_Orbit_Pulsar: "Parking Orbit: Pulsar Zone"
+ NAME_Parking_Orbit_Brown: "Parking Orbit: Brown Dwarf Zone"
+ star_mall_drone: "Star Mall Parking Drone"
+ star_mall_drone_plural: "Star Mall Parking Drones"
+ NAME_Star_Mall_Parking_Drones: "Star Mall Parking Services"
+ NAME_Star_Mall_Parking_Services: "Star Mall Parking Services "
