--- a/mod/thmod/localisation/english/nemesis_crisis_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_crisis_l_english.yml
@@ -3,7 +3,7 @@
  ap_become_the_crisis_desc:1 "ผลงานที่ยิ่งใหญ่ล้วนแต่ต้องการความเสียสละ พวกอื่นๆในกาแล็กซีอาจไม่เข้าใจ แต่พวกเขาจะเชื่อฟังและปฏิบัติตาม"
  menace_name:1 "$menace$:"
  crisis_path_destruction_name:0 "Path of Destruction"
- crisis_path_destruction_desc:0 "Order is unnatural. The true nature of matter is in a chaotic state./n/nWe are not destroying the universe - we are repairing it."
+ crisis_path_destruction_desc:0 "Order is unnatural. The true nature of matter is in a chaotic state.\n\nWe are not destroying the universe - we are repairing it."
  crisis_path_supremacy_name:0 "Path of Supremacy"
  crisis_path_supremacy_desc:0 "The right to rule belongs to whomever is victorious. We are claiming that right, and anyone is free to try and prove us wrong."
  crisis_path_deception_name:0 "Path of Deception"
