--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -135,9 +135,9 @@
  leader_trait_fleet_organizer_2_hive_desc:0 "$leader_trait_fleet_organizer_hive_desc$"
  leader_trait_fleet_organizer_2_machine:0 "$leader_trait_fleet_organizer_machine$ II"
  leader_trait_fleet_organizer_2_machine_desc:0 "$leader_trait_fleet_organizer_machine_desc$"
- leader_trait_skirmisher_hive:0 "Skirmisher"
+ leader_trait_skirmisher_hive:0 "นักสู้"
  leader_trait_skirmisher_hive_desc:0 "This node improves the efficiency of all ships within the fleet."
- leader_trait_skirmisher_machine:0 "Skirmisher"
+ leader_trait_skirmisher_machine:0 "นักสู้"
  leader_trait_skirmisher_machine_desc:1 "This node improves the efficiency of all ships within the fleet by processing advanced skirmish tactics."
  leader_trait_skirmisher_2_hive:0 "$leader_trait_skirmisher_hive$ II"
  leader_trait_skirmisher_2_hive_desc:0 "$leader_trait_skirmisher_hive_desc$"
