--- a/mod/thmod/localisation/english/projects_3_l_english.yml
+++ b/mod/thmod/localisation/english/projects_3_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- DERELICT_SHIP_PROJECT:0 "Derelict Ship"
+ DERELICT_SHIP_PROJECT:0 "ยานร้าง"
  DERELICT_SHIP_PROJECT_DESC:0 "A ship adrift in space, no signals going in or coming out. Inspecting it more closely might shed some light on what has happened to the crew."
  ODD_STAR_PROJECT:0 "Fire of the Furnace"
  ODD_STAR_PROJECT_DESC:0 "The star is appearing to be able to fuse beryllium, which shouldn't be possible."
