--- a/mod/thmod/localisation/english/scripted_loc_l_english.yml
+++ b/mod/thmod/localisation/english/scripted_loc_l_english.yml
@@ -26,8 +26,8 @@
  arthropoid_species:0 "arthropoid"
  plantoid_species:0 "plantoid"
  aquatic_species:0 "aquatic"
- toxic_species:0 "toxic"
- necroid_species:0 "necrotic"
+ toxic_species:1 "toxoid"
+ necroid_species:1 "necroid"
  lithoid_species:0 "lithoid"
  test.edible.title:0 "Hungry?"
  test.edible.desc:0 "Even [Root.GetRulerName], our great [Root.GetRulerTitle], is but a moist [Root.GetEdibleName] among [Root.GetEdibleNamePlural]."
@@ -69,6 +69,18 @@
  getengineerplural_machine:0 "engineering units"
  getengineerplural_hive:0 "engineering drones"
  getengineerplural_normal:0 "engineers"
+ getcolonist_machine: "colonization unit"
+ getcolonist_hive: "colonization drone"
+ getcolonist_normal: "colonist"
+ getcolonist_machine_capital: "Colonization Unit"
+ getcolonist_hive_capital: "Colonization Drone"
+ getcolonist_normal_capital: "Colonist"
+ getcolonistplural_machine: "colonization units"
+ getcolonistplural_hive: "colonization drones"
+ getcolonistplural_normal: "colonists"
+ getcolonistplural_machine_capital: "Colonization Units"
+ getcolonistplural_hive_capital: "Colonization Drones"
+ getcolonistplural_normal_capital: "Colonists"
  get1stplanetkiller_cracker:0 "$PLANET_KILLER_CRACKER$"
  get1stplanetkiller_shielder:0 "$PLANET_KILLER_SHIELDER$"
  get1stplanetkiller_neutron:0 "$PLANET_KILLER_NEUTRON$"
