--- a/mod/thmod/localisation/english/synthetic_dawn_events_l_english.yml
+++ b/mod/thmod/localisation/english/synthetic_dawn_events_l_english.yml
@@ -4,14 +4,8 @@
  syndaw.1.a.tooltip:0 "Gain some §YResearch Points§! for every Pop assimilated."
  syndaw.2.name:0 "[Root.GetName] Integrated"
  syndaw.2.desc:0 "We have assimilated the synthetic units on [Root.GetName] into our network."
- syndaw.21.name:1 "§RUnit Lost§!"
+ syndaw.21.name:2 "Unit Lost"
  syndaw.21.desc:1 "Survey Unit §R[malfunctioning_leader.GetName]§! of the [malfunctioning_leader_fleet.GetName] has ceased functioning due to unintended and prolonged exposure to unshielded high-voltage cables."
- syndaw.22.name:0 "$syndaw.21.name$"
- syndaw.22.desc:0 "Engineering Research Unit §R[malfunctioning_leader.GetName]§! has ceased functioning due to a miscalibrated exoskeleton applicator exerting 2984 times the necessary force to fasten a new dorsal plate to [malfunctioning_leader.GetName]."
- syndaw.23.name:0 "$syndaw.21.name$"
- syndaw.23.desc:0 "Society Research Unit §R[malfunctioning_leader.GetName]§! has ceased functioning. It has been noted that the liquid compound [malfunctioning_leader.GetName] was experimenting on needs to be tightly temperature-controlled, as its fumes are aggressively corrosive."
- syndaw.24.name:0 "$syndaw.21.name$"
- syndaw.24.desc:0 "Physics Research Unit §R[malfunctioning_leader.GetName]§! has ceased functioning due to a self-inflicted gravitational irregularity."
  syndaw.25.name:0 "$syndaw.21.name$"
  syndaw.25.desc:1 "Fleet Commander Unit §R[malfunctioning_leader.GetName]§! of the [malfunctioning_leader_fleet.GetName] has ceased functioning for reasons unrelated to battle."
  syndaw.26.name:0 "$syndaw.21.name$"
