--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -95,8 +95,6 @@
  tech_modular_engineering_desc:1 "Streamlined starbase construction procedures, using modular designs, will reduce the present build cost and time."
  tech_defense_platform_hull_1:0 "ปรับปรุงความสมบูรณ์ของโครงสร้าง"
  tech_defense_platform_hull_1_desc:0 "A reinforced framework and blast shields with enhanced impact absorption will ensure the structural integrity of the platform even under immense pressure."
- tech_habitat_1:0 "ที่อยู่อาศัยวงโคจรดาว"
- tech_habitat_1_desc:0 "Allows the construction of largely self-sustaining Orbital Habitats."
  tech_solar_panel_network:0 "การแปลงพลังงานจากวงโคจร"
  tech_solar_panel_network_desc:1 "Advances in solar panel technology could offset the operating costs of our starbases. The panels would require an entire starbase module to generate enough energy, however."
  tech_mining_terminal:0 "สมาคมเหมืองแร่"
@@ -759,7 +757,7 @@
  tech_planetary_unification_desc_machine_intelligence:0 "Deviance will not be tolerated."
  tech_planetary_unification_hive_mind:0 "Evolutionary Convergence"
  tech_planetary_unification_desc_hive_mind:0 "The ecological crucible in which we fought for survival has etched sturdy paths into our genetic memory. We are the peerless union of all that came before."
- tech_planetary_unification_effect:1 "ได้ £unity£§Yเอกภาพ§! ส่วนหนึ่ง"
+ tech_planetary_unification_effect:2 "ให้ $r_unity$ จำนวนเล็กน้อย"
  tech_adaptive_bureaucracy:0 "ระบบราชการที่ปรับตัวได้"
  tech_adaptive_bureaucracy_desc:1 "The progress we make calls for a new, nimbler form of administration that may aid rather than hinder us in our pursuits."
  tech_adaptive_bureaucracy_machine_intelligence:0 "CPU โพซิทรอนิกส์"
@@ -940,6 +938,8 @@
  gateway_infrastructure:0 "§Hสายโครงสร้างพื้นฐาน§!\n§Eเทคโนโลยีนี้จะนำไปสู่ความก้าวหน้าในด้านโครงสร้างพื้นฐานพลเรือน§!"
  gateway_cloaking:0 "§Hสายพรางตัว§!\n§Eเทคโนโลยีนี้จะนำไปสู่ความก้าวหน้าของเครื่องกำเนิดสนามพลังพรางตัว§!"
  gateway_detection:0 "§Hสายตรวจจับ§!\n§Eเทคโนโลยีนี้จะนำไปสู่ความก้าวหน้าต่อไปในการตรวจจับกองยานพรางตัว§!"
+ gateway_node_reformatting: "§HNode Reformatting Path§!\n§EThis technology will lead to further advancements in Node Reformatting Agendas.§!"
+ gateway_node_culling: "§HNode Culling Path§!\n§EThis technology will lead to further advancements in Node Culling Agendas.§!"
  tech_curator_lab:0 "ห้องแล็บสำรวจ"
  tech_curator_lab_desc:1 "These shipboard lab facilities incorporate advanced technologies from the ancient Curator Order to further increase survey speeds."
  tech_archeology_lab:0 "ห้องแล็บโบราณคดี"
