--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -135,8 +135,8 @@
  HAS_STRATEGIC_RESOURCE_BOOL:0 "มีทรัพยากรเชิงยุทธศาสตร์"
  HAS_NOT_STRATEGIC_RESOURCE:0 "ไม่มี §Y$RESOURCE$§!"
  HAS_STRATEGIC_RESOURCE:0 "มี §Y$RESOURCE$§!"
- HAS_TECHNOLOGY:0 "มี $TECHNAME|Y$"
- HAS_NOT_TECHNOLOGY:0 "ไม่มี $TECHNAME|Y$"
+ HAS_TECHNOLOGY:1 "มีเทคโนโลยี $TECHNAME|Y$"
+ HAS_NOT_TECHNOLOGY:1 "ไม่มีเทคโนโลยี $TECHNAME|Y$"
  HAS_TECHNOLOGY_OPTION:0 "มีตัวเลือก $TECHNAME|Y$"
  HAS_NOT_TECHNOLOGY_OPTION:0 "ไม่มีทางเลือก $TECHNAME|Y$"
  HAS_NOT_MODIFIER:0 "ไม่มีการปรับเปลี่ยน $MODNAME|Y$"
@@ -586,16 +586,16 @@
  HAS_NOT_NUM_SHIPS:1 "Number of ships $VAL0|2Y$ is NOT $COMPARE$ $VAL1|2Y$"
  HAS_NUM_ARMIES:1 "Number of armies $VAL0|Y$ is $COMPARE$ $VAL1|Y$"
  HAS_NOT_NUM_ARMIES:1 "Number of armies $VAL0|Y$ is NOT $COMPARE$ $VAL1|Y$"
- HAS_NUM_STARBASE_MODULES:2 "Number of $TYPE$ modules is $COMPARE$ $NUM|Y$"
- HAS_NOT_NUM_STARBASE_MODULES:2 "Number of $TYPE$ modules is NOT $COMPARE$ $NUM|Y$"
- HAS_NUM_STARBASE_BUILDINGS:2 "Number of $TYPE$ starbase buildings is $COMPARE$ $NUM|Y$"
- HAS_NOT_NUM_STARBASE_BUILDINGS:2 "Number of $TYPE$ starbase buildings is NOT $COMPARE$ $NUM|Y$"
- HAS_NUM_STARBASE_MODULES_IN_SYSTEM:2 "Number of $TYPE$ in system is $COMPARE$ $NUM|Y$"
- HAS_NOT_NUM_STARBASE_MODULES_IN_SYSTEM:2 "Number of $TYPE$ in system is NOT $COMPARE$ $NUM|Y$"
- HAS_NUM_STARBASE_BUILDINGS_IN_SYSTEM:2 "Number of $TYPE$ in system is $COMPARE$ $NUM|Y$"
- HAS_NOT_NUM_STARBASE_BUILDINGS_IN_SYSTEM:2 "Number of $TYPE$ in system is NOT $COMPARE$ $NUM|Y$"
- HAS_NUM_STARBASE_BUILDINGS_IN_COUNTRY:0 "Number of $TYPE$ in $COUNTRY$ is $COMPARE$ $NUM|Y$"
- HAS_NOT_NUM_STARBASE_BUILDINGS_IN_COUNTRY:0 "Number of $TYPE$ in $COUNTRY$ is NOT $COMPARE$ $NUM|Y$"
+ HAS_NUM_STARBASE_MODULES:2 "จำนวนโมดูล $TYPE$ $COMPARE$ $NUM|Y$"
+ HAS_NOT_NUM_STARBASE_MODULES:2 "จำนวนโมดูล $TYPE$ ไม่$COMPARE$ $NUM|Y$"
+ HAS_NUM_STARBASE_BUILDINGS:2 "จำนวนสิ่งปลูกสร้างบนฐานอวกาศ $TYPE$ $COMPARE$ $NUM|Y$"
+ HAS_NOT_NUM_STARBASE_BUILDINGS:2 "จำนวนสิ่งปลูกสร้างบนฐานอวกาศ $TYPE$ ไม่$COMPARE$ $NUM|Y$"
+ HAS_NUM_STARBASE_MODULES_IN_SYSTEM:2 "จำนวน $TYPE$ ในระบบดาว $COMPARE$ $NUM|Y$"
+ HAS_NOT_NUM_STARBASE_MODULES_IN_SYSTEM:2 "จำนวน $TYPE$ ในระบบดาว ไม่$COMPARE$ $NUM|Y$"
+ HAS_NUM_STARBASE_BUILDINGS_IN_SYSTEM:2 "จำนวน $TYPE$ ในระบบดาว $COMPARE$ $NUM|Y$"
+ HAS_NOT_NUM_STARBASE_BUILDINGS_IN_SYSTEM:2 "จำนวน $TYPE$ ในระบบดาว ไม่$COMPARE$ $NUM|Y$"
+ HAS_NUM_STARBASE_BUILDINGS_IN_COUNTRY:0 "จำนวน $TYPE$ ใน $COUNTRY$ $COMPARE$ $NUM|Y$"
+ HAS_NOT_NUM_STARBASE_BUILDINGS_IN_COUNTRY:0 "จำนวน $TYPE$ ใน $COUNTRY$ ไม่$COMPARE$ $NUM|Y$"
  HAS_NUM_STARBASES:0 "Number of starbases $NUM_OWNED|Y$ is $COMPARE$ $NUM_COMPARE|Y$"
  HAS_NOT_NUM_STARBASES:0 "Number of starbases $NUM_OWNED|Y$ is NOT $COMPARE$ $NUM_COMPARE|Y$"
  NUM_SYSTEM_PLANETS_TRIGGER:0 "Number of planets in system ($VALUE1|0Y$) is $COMPARE$ $VALUE2|0Y$"
@@ -612,6 +612,8 @@
  SET_LEADER_MORTAL_EFFECT:0 "Becomes mortal"
  IS_IMMORTAL_TRIGGER:0 "Is immortal"
  IS_NOT_IMMORTAL_TRIGGER:0 "Is mortal"
+ IS_HIDDEN_TRIGGER: "Is hidden"
+ IS_NOT_HIDDEN_TRIGGER: "Is not hidden"
  IS_JOB_OF_CATEGORY:0 "$JOB|Y$ is of the $CAT|Y$ Category"
  IS_NOT_JOB_OF_CATEGORY:0 "$JOB|Y$ is NOT of the $CAT|Y$ Category"
  HAS_ACCESS_MILITARY:0 "Has Military Access"
@@ -704,7 +706,7 @@
  HAS_NOT_DEFENSIVE_PACT_TRIGGER:0 "ไม่ได้ทำสนธิสัญญาป้องกันตนเองกับ $OTHER$"
  HAS_DEFENSIVE_PACT_TRIGGER:0 "มีสนธิสัญญาป้องกันตนเองกับ $OTHER$"
  CAN_NOT_CONTROL_ACCESS_FOR_TRIGGER:0 "Cannot control access towards $TARGET|Y$"
- CAN_CONTROL_ACCESS_FOR_TRIGGER:0 "Can control access towards $TARGET|Y$"
+ CAN_CONTROL_ACCESS_FOR_TRIGGER:0 "สามารถควบคุมการเข้าถึง $TARGET|Y$"
  HAS_NOT_EMPIRE_UNIQUE_BUILDING:0 "Has NOT empire unique building"
  HAS_EMPIRE_UNIQUE_BUILDING:0 "Has empire unique building"
  HAS_FORCED_OPEN_BORDERS:0 "ได้บังคับให้เปิดเขตแดนต่อ $COUNTRY|Y$"
@@ -815,8 +817,8 @@
  NUM_REPEATABLE_TECHS_NOT_TRIGGER:0 "Number of researched repeatable technologies is NOT $COMPARATOR$ $NUM|Y$"
  NUM_TECHS_OF_TIER_TRIGGER:0 "Number of researched technologies of Tier $TIER|Y$ is $COMPARATOR$ $NUM|Y$"
  NUM_TECHS_OF_TIER_NOT_TRIGGER:0 "Number of researched technologies of Tier $TIER|Y$ is NOT $COMPARATOR$ $NUM|Y$"
- NUM_SHIPS_IN_DEBRIS_TRIGGER:0 "Number of $SIZE|Y$ ships in debris is $COMPARATOR$ $NUM|Y$"
- NUM_SHIPS_NOT_IN_DEBRIS_TRIGGER:0 "Number of $SIZE|Y$ ships in debris is NOT $COMPARATOR$ $NUM|Y$"
+ NUM_SHIPS_IN_DEBRIS_TRIGGER:0 "จำนวนยาน $SIZE|Y$ ในเศษซาก $COMPARATOR$ $NUM|Y$"
+ NUM_SHIPS_NOT_IN_DEBRIS_TRIGGER:0 "จำนวนยาน $SIZE|Y$ ในเศษซาก ไม่$COMPARATOR$ $NUM|Y$"
  CAN_RESEARCH_TIER_TRIGGER:0 "Can research Tier $TIER|Y$ Technologies"
  CANNOT_RESEARCH_TIER_TRIGGER:0 "CANNOT research Tier $TIER|Y$ Technologies"
  SECTOR_CONTROLLED_TRIGGER:0 "Is controlled by a sector"
@@ -1204,7 +1206,7 @@
  DISMANTLE_EFFECT:0 "The station is dismantled.\n"
  ACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is added"
  DEACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is removed"
- BEGIN_EVENT_CHAIN_EFFECT:1 "Begins the $NAME$ Event Chain.\n\n"
+ BEGIN_EVENT_CHAIN_EFFECT:1 "เริ่มเหตุการณ์ $NAME$\n\n"
  END_EVENT_CHAIN_EFFECT:1 "Ends the $NAME$ Event Chain.\n\n"
  SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ มีแนวโน้มหลักจริยธรรมไปทาง $ETHIC|Y$\n"
  CHANGE_BACKGROUND_ETHIC:0 "Change Leader Ethic to $ETHIC|Y$"
@@ -1215,8 +1217,8 @@
  QUEUE_FLEET_ACTIONS_EFFECT:0 "Fleet will do special action"
  CLEAR_FLEET_ACTIONS_EFFECT:0 "Removes any fleet special actions"
  ADD_INFLUENCE:2 "£influence£ §Yอิทธิพล§!: $VALUE|Y$\n"
- MODIFY_SPECIES:1 "Modify pops in $COUNTRY|Y$ by adding the trait(s) $ADD$, and removing the trait(s) $REMOVE$"
- MODIFY_SPECIES_ADD:1 "Modify pops in $COUNTRY|Y$ by adding the trait(s) $ADD$"
+ MODIFY_SPECIES:1 "ปรับเปลี่ยนประชากรใน $COUNTRY|Y$ โดยเพิ่มคุณลักษณะ $ADD$, และลบคุณลักษณะ $REMOVE$"
+ MODIFY_SPECIES_ADD:1 "ปรับเปลี่ยนประชากรใน $COUNTRY|Y$ โดยเพิ่มคุณลักษณะ $ADD$"
  MODIFY_SPECIES_REMOVE:1 "Modify pops in $COUNTRY|Y$ by removing the trait(s) $REMOVE$"
  MODIFY_SPECIES_BLANK:0 "Modify pops in $COUNTRY|Y$"
  ESTABLISH_CONTACT_EFFECT:0 "Establishes contact with $COUNTRY|Y$"
@@ -1283,7 +1285,7 @@
  RANDOM_RIM_SYSTEM_EFFECT:0 "Random system on the galactic rim"
  SET_PLANET_MAX_HEALTH_EFFECT:0 "ตั้งพลังชีวิตสูงสุดเป็น $VALUE|Y$"
  SET_PLANET_HEALTH_EFFECT:0 "ตั้งพลังชีวิตเป็น $VALUE|Y$"
- ADD_TRAIT:1 "§H$LEADER$§! gains the §H$TRAIT$§! trait, granting the following effects:\n$EFFECTS$\n"
+ ADD_TRAIT:1 "§H$LEADER$§! ได้รับคุณลักษณะ §H$TRAIT$§! โดยให้ผลดังต่อไปนี้:\n$EFFECTS$\n"
  REMOVE_TRAIT:1 "Removes $TRAIT$ trait from $LEADER|Y$\n"
  REMOVE_ALL_NEGATIVE_TRAITS:1 "ลบคุณลักษณะเชิงลบทั้งหมดจาก $LEADER|Y$\n"
  REMOVE_ALL_POSITIVE_TRAITS:0 "Removes all positive traits from $LEADER|Y$\n"
@@ -1346,6 +1348,7 @@
  SET_NOT_RUINED_EFFECT:0 "Building is Repaired"
  SET_SUBJECT_OF_EFFECT:2 "$COUNTRY|Y$ กลายเป็นบริวารภายใต้ $COUNTRYTWO|Y$"
  SET_SUBJECT_OF_EFFECT_NONE:0 "Becomes independent"
+ SET_SUBJECT_OF_EFFECT_NONE_WE_VERBOSE: "We become independent."
  SET_SPACEPORT_MODULE_EFFECT_REPLACE:0 "Replaces the $MODULE_REPLACED|Y$ with $MODULE|Y$ on the spaceport.\n"
  SET_SPACEPORT_MODULE_EFFECT:0 "Adds the $MODULE|Y$ module to the spaceport.\n"
  GUARANTEE_COUNTRY_EFFECT:0 "$COUNTRY$ guarantees the independence of $COUNTRYTWO$"
@@ -1663,8 +1666,8 @@
  DOES_NOT_HAVE_DIPLO_STANCE:0 "ไม่มีท่าทีทางการทูต $STANCE|Y$"
  TRIGGER_NOT_HAS_SPECIES_ARCHETYPE:0 "ไม่มีเผ่าพันธุ์ชนิด: $TYPE|Y$"
  TRIGGER_HAS_SPECIES_ARCHETYPE:0 "มีเผ่าพันธุ์ประเภท: $TYPE|Y$"
- TRIGGER_HAS_ORIGIN:0 "มีจุดกำเนิด: $ORIGIN|Y$"
- TRIGGER_NOT_HAS_ORIGIN:0 "ไม่มีจุดกำเนิด: $ORIGIN|Y$"
+ TRIGGER_HAS_ORIGIN:1 "มีจุดกำเนิด $ORIGIN|Y$"
+ TRIGGER_NOT_HAS_ORIGIN:1 "ไม่มีจุดกำเนิด $ORIGIN|Y$"
  HAS_ORIGIN_ICON_TIP:0 "This option is available due to $WHO|H$ having the $ORIGIN|Y$ Origin"
  ADD_FAVORS_EFFECT:0 "ได้บุญคุณ $NUM|Y$ เพื่อใช้กับ $TARGET|H$"
  REMOVE_FAVORS_EFFECT:0 "ลบบุญคุณ $NUM|Y$ จาก $TARGET|H$"
@@ -1794,7 +1797,15 @@
  effect_every_council_member:0 "Every Council Member"
  count_council_member_trigger:0 "Number of Council Members$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_council_member_all_trigger:0 "$IS_ALL_NOT$ Council Members fulfill the following conditions"
- add_council_agenda_progress_effect_desc:0 "ความคืบหน้าแผนการของสภา $VALUE$"
+ ADD_COUNCIL_AGENDA_PROGRESS: "Council Agenda Progress:"
+ add_council_agenda_progress_percent_positive: "$ADD_COUNCIL_AGENDA_PROGRESS$ §G+$VALUE|%0$§!\n"
+ add_council_agenda_progress_percent_negative: "$ADD_COUNCIL_AGENDA_PROGRESS$ §R$VALUE|%0$§!\n"
+ add_council_agenda_progress_positive: "$ADD_COUNCIL_AGENDA_PROGRESS$ §G+$VALUE|0$§!\n"
+ add_council_agenda_progress_negative: "$ADD_COUNCIL_AGENDA_PROGRESS$ §R$VALUE|0$§!\n"
+ HAS_NOT_AGENDA_PROGRESS_PERCENT: "Council Agenda Progress is NOT $COMPARE$ $VALUE|0%$"
+ HAS_AGENDA_PROGRESS_PERCENT: "Council Agenda Progress is $COMPARE$ $VALUE|0%$"
+ HAS_NOT_AGENDA_PROGRESS: "Council Agenda Progress is NOT $COMPARE$ $VALUE|0$"
+ HAS_AGENDA_PROGRESS: "Council Agenda Progress is $COMPARE$ $VALUE|0$"
  effect_random_fleet_in_orbit:0 "Random Fleet in Orbit"
  effect_every_fleet_in_orbit:0 "Every Fleet in Orbit"
  NUM_FALLEN_EMPIRES_LESS_THAN:0 "จำนวนจักรวรรดิฟอลเล็น ($VAL0|Y$) $COMPARE$ $VAL1|Y$"
@@ -1940,3 +1951,9 @@
  EFFECT_BREAK_TREATY:0 "$COUNTRY1$ break their $TREATY_TYPE$ with $COUNTRY2$"
  EFFECT_CLEAR_RELATIONS:0 "Clear relations between country '$SCOPED_COUNTRY$' and country '$TARGET_COUNTRY$': $RELATION_KEYS$"
  EFFECT_REMOVE_ENVOYS_TO:0 "Remove envoys assigned by $FROM_COUNTRY$ to $TO_COUNTRY$"
+ TRIGGER_IS_GARRISON: "Fleet $FLEET|Y$ is a garrison"
+ TRIGGER_IS_NOT_GARRISON: "Fleet $FLEET|Y$ is not a garrison"
+ HAS_NUM_POSITIVE_TRAITS: "Number of positive Traits is $COMPARATOR$ $NUM|Y$"
+ HAS_NOT_NUM_POSITIVE_TRAITS: "Number of positive Traits is NOT $COMPARATOR$ $NUM|Y$"
+ HAS_NUM_NEGATIVE_TRAITS: "Number of negative Traits is $COMPARATOR$ $NUM|Y$"
+ HAS_NOT_NUM_NEGATIVE_TRAITS: "Number of negative Traits is NOT $COMPARATOR$ $NUM|Y$"
