--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -26,11 +26,6 @@
  ring_world_2_DESC:0 "This skeletal frame section makes up roughly one quarter of the unfinished Ring World's total surface area. Work on the smaller habitable section has not yet been completed."
  ring_world_3_intermediate:0 "โลกวงแหวน (ขั้นที่3:ส่วนตัวโลก)"
  ring_world_3_intermediate_DESC:0 "A fully functional habitable Ring World section, complete with an active biosphere, that is ready for settlement."
- habitat_0_MEGASTRUCTURE_DETAILS:2 "§HHabitat§!\nAn §Y$pc_habitat$§! is a theoretically self-sustaining space station designed for permanent habitation."
- habitat_0_CONSTRUCTION_INFO_DELAYED:4 "A Habitat can only house habitat-specific £building£ §YBuildings§!. If built in orbit over a planet with £minerals£ §YMineral§!, £energy£ §YEnergy§!, or £physics£ £society£ £engineering£ §YResearch§! deposits, special £district£ §YDistricts§! will be available."
- habitat_0:0 "ที่อยู่อาศัยในอวกาศ"
- habitat_0_DESC:0 "A Habitation Station orbiting an uninhabitable planet, capable of housing a number of §HPops§! and §HBuildings§! away from the surface."
- cant_build_on_habitat:0 "§RCan't be built on Habitats§!"
  think_tank_0_MEGASTRUCTURE_DETAILS:1 "ห้องปฏิบัติการวิจัยและคลังฐานข้อมูลของ §Y$think_tank_3$§! สร้างความยิ่งใหญ่ทางวิทยาศาสตร์ที่ไร้สิ่งเจือปน"
  think_tank_0:0 "สถานีเชื่อมโยงวิทยาศาสตร์ขนาดใหญ่ (ขั้นที่0:ที่ตั้ง)"
  think_tank_0_DESC:0 "This initial site will serve as the base for the future construction of a Science Nexus."
@@ -45,10 +40,9 @@
  allow_ring_world:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! โลกวงแหวน / พิภพวงแหวน"
  allow_spy_orb:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! อาร์เรย์สังเกตุการณ์กาแล็กซี"
  allow_think_tank:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! สถานีเชื่อมโยงวิทยาศาสตร์ขนาดใหญ่"
- allow_habitats:0 "§Hปลดล็อกสถานี:§! ที่อยู่อาศัยในอวกาศ"
  ap_master_builders_habitat_size:2 "§Hที่อยู่อาศัยในอวกาศ§! ของจักรวรรดิเราจะมีที่ว่างเพิ่มเติมอีก §Y2§! เขต"
  allow_edict_consectrated_worlds:5 "§Hปลดล็อกการตัดสินใจ:§! ดาวศักดิ์สิทธิ์\n"
- describe_edict_consectrated_worlds:5 "§Eทำดาวเคราะห์ที่ไม่มีใครอยู่ให้เป็นดาวศักดิ์สิทธิ์ (สูงสุดที่ §Y3§!) เพิ่ม §Yแรงดึงดูดจริยธรรมจิตวิญญาณ§! และ §Yความอยู่ดีกินดีทั่วทั้งจักรวรรดิ§! เช่นเดียวกับ £unity£ §Yการสร้างเอกภาพ§! ตามความสำคัญทางจิตวิญญาณของดาวเคราะห์§!"
+ describe_edict_consectrated_worlds:5 "§Eทำดาวเคราะห์ที่ไม่มีใครอยู่ให้เป็นดาวศักดิ์สิทธิ์ (สูงสุดที่ §Y3§!) เพิ่ม §Yแรงดึงดูดจริยธรรมจิตวิญญาณ§! และ §Yความอยู่ดีกินดีทั่วทั้งจักรวรรดิ§! เช่นเดียวกับ £unity£ §Yการสร้างเอกภาพ§! ตามระดับความศักดิ์สิทธิ์ของดาวเคราะห์ (เมื่อทำเสร็จแล้ว)§!"
  allow_machine_worlds:2 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! โลกเครื่องจักร"
  describe_machine_worlds:6 "- §Yโลกเครื่องจักร§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อสิ่งมีชีวิตส่วนใหญ่ แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§!\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวเครื่องจักร§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§! และ §Yการใช้ที่อยู่อาศัย§! ลดลง §G10%§! เขต £district£ §Yเขตเกษตรกรรม§! บนดาวจะถูกทำลาย"
  allow_hive_worlds:0 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! โลกที่เป็นรัง"
