--- a/mod/thmod/localisation/english/modifiers_3_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_3_l_english.yml
@@ -26,7 +26,7 @@
  forth_dimension_knowledge:0 "Extra Dimensional Insights"
  army_inspiration:0 "Inspired Army Recruits"
  army_inspiration_mach:0 "Focused Army Unit Assemblers"
- science_inspiration:0 "Inspired Science Recruits"
+ science_inspiration:0 "สรรหาวิทยาศาสตร์แรงบันดาลใจ"
  streamlined_ship_design:0 "Streamlining Algorithms"
  immigrants_protection:0 "Protecting Minorities"
  fear_as_control_militarist_p2:0 "Worried Administration"
@@ -123,6 +123,18 @@
  locust_planet_cracked_desc:0 "This planet has been stripped of almost all life and shattered by a massive burst of energy. The only signs of previous intelligent life on this world are a crumbling orbital space station and sporadic traces under the broken surface."
  nascent_locust:0 "Nascent Locust"
  nascent_locust_desc:0 "This planet boasts a large population of easy-to-dispatch but rapidly reproducing creatures. Anyone trying to survive on the surface will have to adapt their infrastructure to occasional attacks by large insects."
+ stratovents: "Stratospheric Vents"
+ stratoventsc_desc: "Towering mineral structures that send gases billowing into the thermosphere."
+ stratovent_world_modifier_tourism: "Untouched Stratospheric Vents"
+ stratovent_world_modifier_tourism_desc: "These magnificient stratospheric vents have been left untouched to allow Tiyanki to graze on the gases."
+ stratovent_world_modifier_refining: "Stratospheric Vent Refineries"
+ stratovent_world_modifier_refining_desc: "The emissions from these massive stratospheric vents have been redirected and refined into precious Exotic Gases."
+ stratovent_world_modifier_tourism_boost: "Stratospherics Vent Platforms"
+ stratovent_world_modifier_tourism_boost_desc: "Stratospheric vent tourism on a higher level with dedicated viewing platforms to observe the feeding behaviour of the mighty Tiyanki."
+ stratovent_world_modifier_refining_upg: "Expanded Stratospheric Vents"
+ stratovent_world_modifier_refining_upg_desc: "The successful detonation of new pathways for underground gases has led to increased production."
+ stratovent_world_modifier_refining_minerals: "Collapsed Stratospheric Vents"
+ stratovent_world_modifier_refining_minerals_desc: "While the partial failure of our vent expansion has reduced production, it also created rich mineral deposits."
  ship_survey_boost:0 "Enhanced Survey Scanner"
  alien_racing_ship:0 "Science Ship"
  alien_racing_ship_plural:0 "Science Ships"
