--- a/mod/thmod/localisation/english/nemesis_content_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_content_l_english.yml
@@ -223,11 +223,11 @@
  espionage.1050.desc:2 "A particularly observant operative in the §Y[finderskeepers_country.GetName]§! has laid their [root.species.GetHandNamePlural] on part of a §H[finderskeepers_country.GetAdj] encryption key§!. It would seem a careless [finderskeepers_country.GetSpeciesName] $job_politician$ mislaid the device whilst commuting.\n\nThis bodes well enough for our operations in the [finderskeepers_country.GetName], but our study of the device's unique design has revealed novel insights for our general approach to §Y$MOD_INTEL_DECRYPTION_ADD$§!."
  espionage.1060.name:0 "Stray Communiqué"
  espionage.1060.desc:1 "One of our $job_politician_plural$ on [capital_scope.GetName] has carelessly misplaced a bundle of sensitive materials, including an §Hencryption key§! whose very existence outside of government facilities is a gross breach of protocol.\n\nOur domestic authorities are scrambling to switch security platforms, as it's quite possible these materials may have fallen into hostile [root.species.GetHandNamePlural]."
- espionage.1060.desc.corp:0 "One of our $job_executive_plural$ on [capital_scope.GetName] has carelessly misplaced a bundle of sensitive materials, including an §Hencryption key§! whose very existence outside of strictly-defined zones is a gross breach of protocol.\n\nOur security teams are scrambling to switch operating procedures, as it's quite possible these materials may have fallen into the [root.species.GetHandNamePlural] of our competitors."
+ espionage.1060.desc.corp:1 "One of our [root.GetCorpRulerJobPlural] on [capital_scope.GetName] has carelessly misplaced a bundle of sensitive materials, including an §Hencryption key§! whose mere existence outside of strictly-defined zones is a gross breach of protocol.\n\nOur security teams are scrambling to switch operating procedures, as it's quite possible these materials may have fallen into the [root.species.GetHandNamePlural] of our competitors."
  espionage.1060.a:0 "Fire this incompetent, at once!"
  espionage.1060.a.tooltip:1 "A £job_politician£ §Y$job_politician$§! on our capital is fired and §Rdemoted§!."
  espionage.1060.b:0 "$espionage.1060.a$"
- espionage.1060.b.tooltip:0 "An £job_executive£ §Y$job_executive$§! on our capital is fired and §Rdemoted§!."
+ espionage.1060.b.tooltip:1 "A §Y[root.GetCorpRulerJobIcon]§! on our capital is fired and §Rdemoted§!."
  espionage.1070.name:0 "Hostile Infiltration Detected"
  espionage.1070.desc.identified.intro:1 "Our Encryption measures have caught a band of dangerous infiltrators. These would-be hostiles appear to be working on behalf of the §H[hostile_infiltration_country.GetName]§!, on a scheme which would have cost many [root.species.GetAdj] lives and caused us significant damage."
  espionage.1070.desc.identified:1 "$espionage.1070.desc.identified.intro$\n\nWe have managed to §Ydecrypt§! various materials they were carrying, however none lays out the full scope of their plans against us; nor are we able to say with certainty what their next move may be. Our Intel gains are therefore relatively small.\n\nWe must carefully consider how to respond. We may wish to keep quiet about our own capabilities, feigning ignorance in front of our other galactic neighbors. We would, however, also be justified in publicly denouncing this planned act of violence against us."
@@ -706,6 +706,7 @@
  sabotaged_disruption_field:0 "$sm_disruption_field$ Sabotaged"
  sabotaged_fleet_academy:0 "$sm_fleet_academy$ Sabotaged"
  sabotaged_hydroponics_bay:0 "$sm_hydroponics_bay$ Sabotaged"
+ sabotaged_mining_bay: "$sm_mining_bay$ Sabotaged"
  sabotaged_ice_mining_station:0 "$sm_ice_mining_station$ Sabotaged"
  sabotaged_listening_post:0 "$sm_listening_post$ Sabotaged"
  sabotaged_mercenary_garrison:0 "$sm_mercenary_garrison$ Sabotaged"
@@ -718,12 +719,14 @@
  sabotaged_target_uplink_computer:0 "$sm_target_uplink_computer$ Sabotaged"
  sabotaged_trader_proxy_office:0 "$sm_trader_proxy_office$ Sabotaged"
  sabotaged_transit_hub:0 "$sm_transit_hub$ Sabotaged"
+ sabotaged_feeder: "$sm_feeder$ Sabotaged"
  sabotaged_warp_fluctuator:0 "$sm_warp_fluctuator$ Sabotaged"
  sabotaged_orbital_ring_anchorage:0 "ก่อวินาศกรรม $sm_orbital_ring_anchorage$"
  sabotaged_orbital_ring_gun_battery:0 "ก่อวินาศกรรม $sm_orbital_ring_gun_battery$"
  sabotaged_orbital_ring_habitation:0 "ก่อวินาศกรรม $sm_orbital_ring_habitation$"
  sabotaged_orbital_ring_hangar_bay:0 "ก่อวินาศกรรม $sm_orbital_ring_hangar_bay$"
  sabotaged_orbital_ring_missile_battery:0 "ก่อวินาศกรรม $sm_orbital_ring_missile_battery$"
+ sabotaged_orbital_ring_feeder: "$orbital_ring_feeder$ Sabotaged"
  sabotaged_ring_alloys_hub:0 "$sm_ring_alloys_hub$ Sabotaged"
  sabotaged_ring_bureaucracy_hub:0 "$sm_ring_bureaucracy_hub$ Sabotaged"
  sabotaged_ring_consumer_goods_hub:0 "$sm_ring_consumer_goods_hub$ Sabotaged"
