--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -275,7 +275,7 @@
  edict_tracking_implants_desc:0 "Mandatory subdermal implants record movement and actions, greatly enhancing our empire's internal security. Loyal citizens have nothing to hide from the government."
  edict_thought_enforcement:0 "การบังคับความคิด"
  edict_thought_enforcement_desc:0 "Telepaths monitoring the citizenry for incorrect thoughts will make corrections as they find them."
- edict_thought_enforcement_effect:1 "Encryption: §G+1§!\nHappiness: §R-10%§!\nGoverning Ethics Attraction: §G+25%§!\n$planet_telepaths$ provide §G-30§! Crime"
+ edict_thought_enforcement_effect:1 "การเข้ารหัส: §G+1§!\nความสุข: §R-10%§!\nการดึงดูดจริยธรรมการปกครอง: §G+25%§!\n$planet_telepaths$ ทำให้อาชญากรรม §G-30§!"
  edict_synaptic_reinforcement:0 "เสริมกำลังโครงข่ายประสาท"
  edict_synaptic_reinforcement_desc:0 "Reinforces our Synaptic Nodes as central foci in our colonies, increasing their ability to provide for nearby drones."
  edict_synaptic_reinforcement_tooltip:0 "§Y$building_hive_node$§! gain 1 §Y$job_maintenance_drone$§! job but their upkeep is increased by £energy£ §R+2§!."
