--- a/mod/thmod/localisation/english/observation_events_l_english.yml
+++ b/mod/thmod/localisation/english/observation_events_l_english.yml
@@ -39,8 +39,8 @@
  observation.104.c.response:1 "On the contrary! I have never been more lucid! The death of the [Root.GetName] is inevitable. You'd have to be blind not to see the signs.\n\nOh, it may take anything from a decade to a century, but your downfall will come. After you have finished destroying yourselves with inaction, the galaxy will belong to vibrant young cultures such as the one I am in the process of building.\n\nThere is little more to say. I bid you farewell. "
  observation.105.name:1 "Rogue Scientist Consolidates Power"
  observation.105.desc:2 "We have received alarming reports from the surface of [pre_ftl_planet.GetName]. It looks like our rogue scientist is consolidating power - [missing_scientist.GetHeShe] [missing_scientist.GetHasHave] given one of the feudal kingdoms access to advanced weaponry, and they are now in the process of conquering the rest of the [pre_ftl_planet.GetPlanetMoon] in [missing_scientist.GetHisHer] name.\n\nA plan has been proposed to forcibly extract [missing_scientist.GetHimHer], but it will require significant ground forces. There is no telling what effect this will have on the native population, as many have come to see [missing_scientist.GetHimHer] as a god."
- observation.105.a:1 "The operation is a go. Remove [missing_scientist.GetHimHer]."
- observation.105.b:1 "It would only make things worse..."
+ observation.105.a:1 "ปฏิบัติการนี้เป็นไปเพื่อ ลบ[missing_scientist.GetHimHer]"
+ observation.105.b:1 "มันมีแต่จะทำให้เรื่องแย่ลง..."
  observation.106.name:1 "Successful Extraction"
  observation.106.desc:1 "We have successfully extracted the rogue scientist from [pre_ftl_planet.GetName]! Hundreds of [owner.GetPreFTLLowerPlural] were tragically gunned down when they launched suicidal attacks against our forces in a futile attempt to protect their 'god.'\n\nOur legal system will now deal with the scientist, but the impact of these events on the [pre_ftl_planet.GetPlanetHabitat]'s civilization must be immense. They still possess some of our technology, and their deity has just been spirited away by invaders from the stars."
  observation.106.a:1 "At least one problem has been dealt with."
