--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -58,7 +58,7 @@
  quantum_catapult_restored_slingshot:0 "$quantum_catapult_1$"
  quantum_catapult_restored_slingshot_DESC:1 "$quantum_catapult_2_DESC$"
  quantum_catapult_improved_slingshot:0 "Improved $quantum_catapult_1$"
- quantum_catapult_improved_slingshot_DESC:1 "$quantum_catapult_2_DESC$"
+ quantum_catapult_improved_slingshot_DESC:2 "$quantum_catapult_3_DESC$"
  quantic_ambush:0 "Quantic Ambush"
  quantic_ambush_specialists:0 "Quantic Ambush Specialists"
  quantic_ambush_bonus_slingshot:0 "§G50%§!"
@@ -102,7 +102,7 @@
  MESSAGE_CAPITALS_DISCONNECTED_RELAY_NETWORK_DESC:0 "Our capital is no longer connected to that of the $OTHER|Y$ through a §YHyper Relay§! network."
  sm_orbital_ring_habitation:0 "โมดูลที่อยู่อาศัย"
  sm_orbital_ring_habitation_desc:1 "High-speed space elevators allow the planet to extend its habitation, resource storage and refinement facilities into orbit.\n"
- orbital_ring_habitation_districts_maxed_out:1 "§YDistricts provided by this $sm_orbital_ring_habitation$ are in use on [planet.GetName]§!."
+ orbital_ring_habitation_districts_maxed_out:2 "§RDistricts provided by this $sm_orbital_ring_habitation$ are in use on [planet.GetName]§!."
  sm_orbital_ring_shipyard:0 "อู่ต่อยาน"
  sm_orbital_ring_shipyard_desc:0 "$sm_shipyard_desc$"
  sm_orbital_ring_anchorage:0 "ที่จอดยาน"
@@ -178,6 +178,7 @@
  sorbital_shipyard:0 "Orbital Shipyard"
  sorbital_anchorage:0 "Orbital Docks"
  sorbital_fortress:0 "Defense Ring"
+ sorbital_seeder: "Orbital Orchard"
  sorbital_habitation:0 "Habitation Ring"
  STARBASE_BUILDING_NOT_REMOVABLE:0 "§RCannot dismantle existing structure§!"
  FLEETORDER_APPROACHING_BYPASS:1 "Approaching $BYPASS_TYPE|H$"
