--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -28,6 +28,21 @@
  SUPREMACIST_RULER_SAME_SPECIES:0 "[Root.Owner.GetSpeciesName] [Root.Owner.GetRulerTitle]"
  SUPREMACIST_RULER_NOT_SAME_SPECIES:0 "[Root.Owner.GetRulerTitle] เป็นพวกต่างดาว"
  SUPREMACIST_RULER_NOT_SAME_SPECIES_DESC:0 "[Root.GetName] ต้องการให้ผู้ปกครองของเราเป็นเผ่าพันธุ์เดียวกับพวกเขา และจะโกรธเคืองเมื่อผู้ที่ไม่ใช่เผ่า [Root.Owner.GetSpeciesName] ดำรงตำแหน่ง [Root.Owner.GetRulerTitle]"
+ SUPREMACIST_COUNCIL_SAME_SPECIES1: "Homogeneous Council"
+ SUPREMACIST_COUNCIL_NOT_SAME_SPECIES1: "Xenos on the Council"
+ SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC1: "The [Root.GetName] want our Council to be homogeneous and will be angered by any non-[Root.Owner.GetSpeciesName] on the council."
+ SUPREMACIST_COUNCIL_SAME_SPECIES2: "$SUPREMACIST_COUNCIL_SAME_SPECIES1$"
+ SUPREMACIST_COUNCIL_NOT_SAME_SPECIES2: "$SUPREMACIST_COUNCIL_NOT_SAME_SPECIES1$"
+ SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC2: "$SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC1$"
+ SUPREMACIST_COUNCIL_SAME_SPECIES3: "$SUPREMACIST_COUNCIL_SAME_SPECIES1$"
+ SUPREMACIST_COUNCIL_NOT_SAME_SPECIES3: "$SUPREMACIST_COUNCIL_NOT_SAME_SPECIES1$"
+ SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC3: "$SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC1$"
+ SUPREMACIST_COUNCIL_SAME_SPECIES4: "$SUPREMACIST_COUNCIL_SAME_SPECIES1$"
+ SUPREMACIST_COUNCIL_NOT_SAME_SPECIES4: "$SUPREMACIST_COUNCIL_NOT_SAME_SPECIES1$"
+ SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC4: "$SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC1$"
+ SUPREMACIST_COUNCIL_NOT_FULL_XENOS: "[Root.Owner.GetSpeciesName] rule the council"
+ SUPREMACIST_COUNCIL_FULL_XENOS: "Council Full of Xenos"
+ SUPREMACIST_COUNCIL_FULL_XENOS_DESC: "The [Root.GetName] are enraged by the number of non-[Root.Owner.GetSpeciesNamePlural] on the council."
  SUPREMACIST_UNRESTRICTED_STUDY:0 "การศึกษาต่างดาวแบบล้วงล้ำ"
  SUPREMACIST_UNRESTRICTED_STUDY_DESC:1 "การใช้ประโยชน์จากอารยธรรมต่างดาวดึกดำบรรพ์ ให้เกิดผลสูงสุดโดยการออกกฎหมายหรือนโยบายสำหรับการแทรกแซงแบบปกติหรือแบบรุกราน จะทำให้ [Root.GetName] พอใจ"
  SUPREMACIST_NO_UNRESTRICTED_STUDY:0 "$SUPREMACIST_UNRESTRICTED_STUDY$"
@@ -90,8 +105,8 @@
  XENOIST_NO_PURGE:1 "ไม่มีการล้างเผ่าพันธุ์"
  XENOIST_NO_PURGE_DESC:2 "Failing to outlaw the wholesale purging of species will greatly displease the [Root.GetName]."
  XENOIST_PURGE:0 "$XENOIST_NO_PURGE$"
- XENOIST_ENCLAVE_BORDERS:0 "Enclaves Incorporated"
- XENOIST_ENCLAVE_BORDERS_DESC:0 "Keeping any Enclave stations within our borders facilitates cultural exchange, which will please the [Root.GetName]."
+ XENOIST_ENCLAVE_BORDERS:0 "รวมเข้ากับ Enclave"
+ XENOIST_ENCLAVE_BORDERS_DESC:0 "การเก็บสถานี Enclave ไว้ภายในขอบเขตของเราจะช่วยอำนวยความสะดวกในการแลกเปลี่ยนวัฒนธรรม ซึ่งจะทำให้ [Root.GetName] พอใจ"
  XENOIST_NO_ENCLAVE_BORDERS:1 "$XENOIST_ENCLAVE_BORDERS$"
  XENOIST_MULTICULTURALISM:0 "สังคมพหุวัฒนธรรม"
  XENOIST_MULTICULTURALISM_DESC:0 "Hosting at least §Y4§! unique species within our Empire will please the [Root.GetName]."
@@ -316,7 +331,7 @@
  TECHNOLOGIST_TECH_LEAP_DESC:0 "[Root.GetName] ไม่ยอมให้จักรวรรดิอื่นมีระดับเทคโนโลยี §Yเทียบเท่า§!"
  TECHNOLOGIST_TECH_LAG:0 "เป็นผู้นำทางเทคโนโลยี"
  TECHNOLOGIST_RESEARCH_TREATIES:0 "วิทยาศาสตร์ไร้พรมแดน"
- TECHNOLOGIST_RESEARCH_TREATIES_DESC:1 "Signing Research Treaties with at least §Y3§! other Empires, being in a Research Cooperative, or providing technological enlightenment to a [root.owner.GetPreFTLLower] civilization will please the [Root.GetName]."
+ TECHNOLOGIST_RESEARCH_TREATIES_DESC:1 "การลงนามสนธิสัญญาการวิจัยกับจักรวรรดิอื่นอย่างน้อย §Y3§! จักรวรรดิ มีความร่วมมือกันในการวิจัย (จุดยืนทางการทูต),  หรือการให้ความรู้ทางเทคโนโลยีแก่อารยธรรม [root.owner.GetPreFTLLower] จะทำให้ [Root.GetName] พอใจ"
  TECHNOLOGIST_FEW_RESEARCH_TREATIES:0 "$TECHNOLOGIST_RESEARCH_TREATIES$"
  TECHNOLOGIST_NO_SYNTH_ENVY:0 "ต้องการการสังเคราะห์"
  TECHNOLOGIST_NO_SYNTH_ENVY_DESC:0 "Seeing other empires parade any kind of Robotic Pops around - with no domestic equivalents on any of our worlds - is sure to displease the [Root.GetName]."
