--- a/mod/thmod/localisation/english/projects_5_l_english.yml
+++ b/mod/thmod/localisation/english/projects_5_l_english.yml
@@ -7,3 +7,5 @@
  GHOST_SHIP_PROJECT_02_DESC:0 "The psionic chatter detected in the Hillos system appears to belong to the artificial consciousness trapped aboard the 'ghost ship' Ubume."
  ANCIENT_MANUFACTORIUM_PROJECT:0 "Power Up Foundry"
  ANCIENT_MANUFACTORIUM_PROJECT_DESC:0 "Now, after all the preparations we've made, it's time for us to get all this machinery up and running, connect the facility to the planetary power grid!"
+ STRATOVENTS_PROJECT: "Stratospheric Vents Project"
+ STRATOVENTS_PROJECT_DESC: "Study the unique stratospheric vent formations on §Y[planet.GetName]§! and their significance to space fauna."
